[mod]第8条の表を修正。

--- a/03_福利厚生.md
+++ b/03_福利厚生.md
@@ -55,7 +55,7 @@
 1.	補助対象費用は、次の通りとする。
 
 
-|購入金額|支援金額|
+|購入金額|支援金額|||
 |:--|:--|:--|:--|
 ||WindowsOS|MacOS|その他OS|
 |50,000円以上|購入金額の35%|購入金額の70%|購入金額の35%|
