--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -36,7 +36,7 @@
 		-	職務経歴書
 		-	健康診断書（3ヶ月以内に受診したものに限る）
 		-	その他、会社が提出を求めるもの
-1.	会社は、採用内定者に対し、合格した旨、入社予定日及び内定取消事由を記載した内定通知書を交付する。
+1.	会社は、採用内定者に対し、合格した旨、入社予定日及び内定事由を記載した内定通知書を交付する。
 1.	正社員以外については、選考手続きの一部を省略し、又、内定を経ずして本採用することがある。この場合においては、次条の規程は適用しない。
 
 ## 第７条	内定取消事由
@@ -65,7 +65,7 @@
 ## 第９条	試用期間
 1.	従業員として新たに採用した者の試用期間は、次のとおりとする。
 	1.	正社員の場合
-		-	入社日から3ヶ月間を試用期間とする。
+		-	入社日から3ヶ月もしくは６ヶ月を試用期間とする。
 		-	ただし、会社が認めた場合は、この期間を設定しない、または短縮することがある。
 	1.	契約社員及び嘱託社員の場合
 		-	試用期間は設けない。
@@ -418,19 +418,24 @@
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
+## 第４２条	教育訓練休暇
+1.	会社は、労働者が自発的に教育訓練を受講する場合に教育訓練休暇を付与する。
+1.	教育訓練休暇を有給とし、1年間につき10日間付与する。
+1.  教育訓練休暇は、従業員から、自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する旨の申し出があった場合に、付与する。
+
 # 第７章	賃金
 
-## 第４２条	賃金
+## 第４３条	賃金
 1.	賃金は、別に定める賃金規定により支給するものとする。
 
 # 第８章	福利厚生
 
-## 第４３条	福利厚生
+## 第４４条	福利厚生
 1.	福利厚生は、別に定める福利厚生規定により提供するものとする。
 
 # 第９章	表彰及び懲戒
 
-## 第４４条	表彰
+## 第４５条	表彰
 1.	会社は、従業員が次のいずれかに該当する場合、次の通り表彰する。
 	1.	業務上有益な創意工夫、改善を行い、会社の運営に貢献したとき
 	1.	永年にわたって誠実に勤務し、その成績が優秀で他の模範となるとき
@@ -439,7 +444,7 @@
 	1.	前各号に準ずる前項または功労のあったとき
 1.	表彰は、原則として会社の創立記念日に行う。
 
-## 第４５条	懲戒の種類
+## 第４６条	懲戒の種類
 1.	懲戒の種類及び程度は、次の通りとする。
 	-	けん責・・・始末書を提出させて将来を戒める
 	-	減給・・・始末書を提出させて減給する。ただし減給は1回の額が、平均賃金の1日分の5割を超えることなく、また総額が1賃金支払い期間における賃金の1割を超えることはない
@@ -448,7 +453,7 @@
 	-	論旨退職・・・退職届を提出するように勧告する。なお勧告した日から7日以内に退職届の提出がない場合は懲戒解雇とする
 	-	懲戒解雇・・・即時解雇する
 
-## 第４６条	けん責・減給・出勤停止又は降格
+## 第４７条	けん責・減給・出勤停止又は降格
 1.	従業員が次の各号のいずれかに該当するときは、けん責・減給・出勤停止・降格とする。
 	1.	正当な理由なく、当該無断欠勤をした日以前6ヶ月間の間にも連絡・断続を問わず無断欠勤が3日以上に及ぶ時
 	1.	正当な理由なく、しばしば欠勤・遅刻・早退など勤務を怠ったとき
@@ -457,7 +462,7 @@
 	1.	本規定及び第16条の服務規律に違反し、その事案が軽微なとき
 	1.	無届の方法により通勤していることが判明したとき
 
-## 第４７条	論旨解雇又は懲戒解雇
+## 第４８条	論旨解雇又は懲戒解雇
 1.	従業員が次の各号の一に応答した場合は、諭旨解雇又は懲戒解雇とする。懲戒解雇の場合において、労働基準監督署長の認定を受けた時は、労働基準法第20条に規程する予告手当は支給しない。但し、平素の勤務態度その他の情状によっては、普通解雇又は前条の処分とすることがある。
 	1.	重要な経歴を偽り、採用されたとき
 	1.	正当な理由なく、無断欠勤が以前6ヶ月間に連続・断続を問わず7日以上あり、出勤の督促に応じなかったとき
@@ -485,19 +490,19 @@
 	1.	この他本規則に違反し、又は前各号に準ずる不都合な行為があったとき
 1.	前項の規程による従業員の懲戒解雇に際し、従業員から請求があった場合は、懲戒解雇の理由を記載した文書を交付する。
 
-## 第４８条	損害賠償
+## 第４９条	損害賠償
 1.	従業員が故意または重大な過失により会社に損害を与えた場合、損害の一部または、全部を本人に賠償させることがある。ただしこれにより懲戒処分を免れるものではない。
 1.	当該損害賠償の責任は、退職後も免れることはできない。
 
 # 第１０章	教育
 
-## 第４９条	教育訓練
+## 第５０条	教育訓練
 1.	会社は、従業員に対し、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
 1.	従業員は、会社から教育訓練を受講するように指示された場合には、特段の事由がない限り指示された教育訓練を受けなければならない。
 
 # 第１１章	安全衛生及び労災補償
 
-## 第５０条	遵守事項
+## 第５１条	遵守事項
 1.	会社は、従業員の安全衛生の確保及び改善を図り、快適な職場環境の形成のため必要な措置を講ずる。
 1.	従業員は、安全衛生に関する法令及び会社の指示を守り、会社と協力して労働災害の防止に努めなければならない。
 	1.	自衛消防隊を会社が組織する場合は必ず加入すること
@@ -506,14 +511,14 @@
 	1.	通路、階段、非常口及び消火設備のある場所に物品等を置かないこと
 	1.	前各号のほか、安全、防災に関する管理者の指示に従うこと
 
-## 第５１条	非常災害時の措置
+## 第５２条	非常災害時の措置
 1.	従業員は、災害その他非常災害の発生する危険を予知し、又は異常を発見したとき、直ちに所属長に通報し、臨機の措置をとらなければならない。
 1.	従業員は、火災その他非常災害が発生した場合は、互いに協力してその被害を最小限に留めるように努力して、顧客等の避難誘導等適切な措置を講じなければならない。
 
-## 第５２条	衛生に関する心得
+## 第５３条	衛生に関する心得
 1.	従業員は、健康の保持向上に努め、衛生管理者その他の関係者の指示に従い、会社の行う健康に関する施策の推進に協力し、かつ指示を励行しなければならない。
 
-## 第５３条	健康診断
+## 第５４条	健康診断
 1.	会社は、正社員に対して、採用の際及び毎年1回（深夜労働に従事する者は6か月ごとに1回）、定期に健康診断を行う。但し契約社員であっても、週所定労働時間が通常労働者の4分の3以上である者については同様に健康診断を行う。
 1.	前項によらず、従業員が採用前3か月以内に健康診断を実施し、その結果を証明する書類を提出した場合には、受診した項目について、採用時の健康診断を省略することができる。
 1.	従業員は、健康診断の結果に異常の所見がある場合には、再検査を受診しなければならない。
@@ -522,21 +527,22 @@
 	1.	会社の労務管理、賃金管理
 	1.	出向、転籍等のための人事管理
 
-## 第５４条	長時間従業員の面接指導
+## 第５５条	長時間従業員の面接指導
 1.	1月あたりの時間外労働が80時間を超え、疲労の蓄積が認められ又は健康上の不安を有している従業員から申出があった場合には、医師による面接指導を行う。
 
-## 第５５条	安全衛生教育
+## 第５６条	安全衛生教育
 1.	従業員に対し、採用の際及び配置換え等により作業内容を変更した際に、その従事する業務に必要な安全衛生教育を行う。
 
-## 第５６条	就業禁止等
+## 第５７条	就業禁止等
 1.	他人に伝染するおそれのある疾病にかかっている者または、疾病のため他人に害を及ぼすおそれのある者、その他医師が就業不適当と認めた者は就業させない。
 1.	従業員は、同居の家族または同居人が、他人に伝染するおそれのある疾病に罹り、またはその疑いのある場合、直ちに所属長に届け出て、必要な指示を受けなければならない。
 
-## 第５７条	災害補償
+## 第５８条	災害補償
 1.	従業員が業務上の事由又は通勤により負傷し、疾病にかかりまたは死亡した場合、労働基準法及び労働者災害補償保険法に定めるところにより災害補償を行う。
 
 # 附則
 -	本規則は、平成27年4月 1日から施行する。
+- 本規則は、平成29年8月15日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
 
