--- a/03_福利厚生.md
+++ b/03_福利厚生.md
@@ -29,7 +29,7 @@
 ### 第６条	書籍購入補助
 1.	書籍購入補助は、社員教育の一環として、従業員が自己学習のために購入する書籍の代金を補助するものである。
 1.	書籍購入補助は、原則として技能職に従事している従業員（エンジニア、デザイナー等）のみを対象とする。
-1.	書籍購入補助を希望する従業員は、購入日から10日以内に申請を行い、承認を得なければならない。
+1.	書籍購入補助を希望する従業員は、会社に事前申請し、承認を得なければならない。
 1.	会社は、書籍の内容及び会社の業績等により、補助を認めないことがある。
 1.	補助額の上限は、1月につき5,000円までとする。
 
@@ -50,7 +50,7 @@
 ### 第８条	パソコン購入補助
 1.	パソコン購入補助は、従業員が新技術に触れる機会を増やし、新たなサービスやアイデアの創出を促すこと及び業務利用のために購入するパソコンの代金を補助するものである。
 1.	パソコン購入補助は、原則として技能職に従事している従業員（エンジニア、デザイナー等）のみを対象とする。
-1.	パソコン購入補助を希望する従業員は、購入日から10日以内に申請を行い、承認を得なければならない。
+1.	パソコン購入補助を希望する従業員は、会社に事前申請し、承認を得なければならない。
 1.	会社は、会社の業績等により、補助を認めないことがある。
 1.	補助対象費用は、次の通りとする。
 
@@ -58,7 +58,8 @@
 |購入金額|支援金額|||
 |:--|:--|:--|:--|
 ||WindowsOS|MacOS|その他OS|
-|50,000円以上|購入金額の35%|購入金額の70%|購入金額の35%|
+|99,999円迄|購入金額の35%|購入金額の50%|購入金額の35%|
+|100,000円以上|35,000円|50,000円|35,000円|
 
 ### 第９条	予防接種補助
 1.	予防接種補助は、従業員の健康維持を目的とするものである。
@@ -74,3 +75,4 @@
 
 # 附則
 -	本規則は、平成27年4月 1日から施行する。
+- 本規則は、平成29年8月15日から改定施行する。
