--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -29,12 +29,10 @@
 	1.	職歴のない者
 		-	履歴書
 		-	学業成績証明書又は卒業（見込み）証明書
-		-	健康診断書（3ヶ月以内に受診したものに限る）
 		-	その他、会社が提出を求めるもの
 	1.	職歴のある者
 		-	履歴書
 		-	職務経歴書
-		-	健康診断書（3ヶ月以内に受診したものに限る）
 		-	その他、会社が提出を求めるもの
 1.	会社は、採用内定者に対し、合格した旨、入社予定日及び内定事由を記載した内定通知書を交付する。
 1.	正社員以外については、選考手続きの一部を省略し、又、内定を経ずして本採用することがある。この場合においては、次条の規程は適用しない。
@@ -51,8 +49,8 @@
 
 ## 第８条	採用時の提出書類
 1.	従業員として採用された者は、入社日から2週間以内に次の書類を提出しなければならない。
-	-	住民票記載事項証明書
 	-	年金手帳
+	-	マイナンバー
 	-	雇用保険被保険証（職歴のある者に限る）
 	-	前職の源泉徴収票（職歴のある者に限る）
 	-	入社誓約書（正社員として採用され、かつ会社が提出を求めた場合に限る）
@@ -64,11 +62,9 @@
 
 ## 第９条	試用期間
 1.	従業員として新たに採用した者の試用期間は、次のとおりとする。
-	1.	正社員の場合
+	1.	従業員の場合
 		-	入社日から3ヶ月もしくは６ヶ月を試用期間とする。
 		-	ただし、会社が認めた場合は、この期間を設定しない、または短縮することがある。
-	1.	契約社員及び嘱託社員の場合
-		-	試用期間は設けない。
 1.	試用期間中の従業員が、次のいずれかに該当し、従業員として不適格であると認められた場合は、本採用を拒否し解雇することがある。
 	1.	会社が指定した必要書類を提出しないとき
 	1.	会社に申告した経歴や能力に偽りがあったと認められるとき
@@ -97,7 +93,7 @@
 
 ## 第１２条	正社員への転換
 1.	勤続6ヶ月以上経過した契約社員の者で、本人が希望し会社が同意した場合、正社員に転換させる。
-1.	転換時期は、毎年6月1日及び12月1日とする。
+1.	転換時期は、随時とする。
 1.	転換させる場合の要件及び基準は、次の通りとする。
 	1.	正社員と同様の勤務時間、日数で勤務が可能な者
 	1.	所属長の推薦があり、部門長の面接試験に合格した者
@@ -260,7 +256,7 @@
 	1.	労働時間が常駐先所定労働時間に満たない場合
 		-	（基本労働時間 - 常駐先所定労働時間に満たなかった時間）を労働したものとみなす
 	1.	労働時間が常駐先所定労働時間を超える場合
-		-		（基本労働時間 ＋ 常駐先所定労働時間を超過した時間）を労働したものとみなす
+		-	（基本労働時間 ＋ 常駐先所定労働時間を超過した時間）を労働したものとみなす
 
 ## 第２５条	始業・終業の時刻及び休憩時間
 1.	始業・終業の時刻及び休憩の時間は、次のとおりとする。
@@ -418,10 +414,10 @@
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
-## 第４２条	教育訓練休暇
-1.	会社は、労働者が自発的に教育訓練を受講する場合に教育訓練休暇を付与する。
+## 第４２条	教育訓練休暇
+1.	会社は、労働者が自発的に教育訓練を受講する場合に教育訓練休暇を付与する。
 1.	教育訓練休暇を有給とし、1年間につき10日間付与する。
-1.  教育訓練休暇は、従業員から、自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する旨の申し出があった場合に、付与する。
+1.  教育訓練休暇は、従業員から、自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する旨の申し出があった場合に、付与する。
 
 # 第７章	賃金
 
