各種章番号修正

--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -1,10 +1,10 @@
 # 第１章		総則
 
-### 第１条	目的
+## 第１条	目的
 1.	この就業規則（以下、本規則という）は、労働基準法（以下、労基法という）第89条に基づき、株式会社アウルキャンプ（以下、会社という）の従業員の労働条件、服務規律その他の就業に関する事項を定める。
 1.	本規則により、会社及び従業員は、共に本規則を守り、会社業務の円滑な運営と会社秩序の維持を図り、相協力して社業の発展に努めなければならない。
 
-### 第２条	従業員の定義
+## 第２条	従業員の定義
 1.	従業員の区分及び定義は、次のとおりとする。
 	-	正社員・・・期間の定めのない労働契約により、従業員として採用された者
 		-	常勤正社員・・・短時間勤務ではない正社員
@@ -12,12 +12,14 @@
 	-	契約社員・・・有期労働契約により雇用され、正社員に該当しない者
 	-	嘱託社員・・・定年退職した後、嘱託員契約により再雇用された者
 
-### 第３条	適用範囲
+## 第３条	適用範囲
 1.	本規則は従業員に対し適用する。但し、契約社員・嘱託社員等はその者に適用する別段の定めをした場合はその定め、または個別の雇用契約を優先するものとする。
 
-### 第４条	周知
+## 第４条	周知
 1.	会社は、本規則を常時見やすい場所へ備え付けるなどの方法によって従業員に周知する。
 1.	従業員は、本規則の内容を知らなかったことを理由に本規則に違反した責めを免れることはできない。
+
+<div style="page-break-before:always"></div>
 
 # 第２章		人事
 
@@ -138,6 +140,8 @@
 1.	復職に際して、本人のみならず親族に対して意見聴取を行うことがある。この場合は、従業員はこれに協力しなければならない。
 1.	復職しても1年以内に同一又は類似の事由により欠勤又は完全な労務提供をできない状況に至った場合は、復職を取り消し、直ちに休職を命ずる。この場合の休職期間は、当該復職前の休職期間と通算する。
 
+<div style="page-break-before:always"></div>
+
 # 第３章	定年、退職及び解雇
 
 ## 第１６条	定年
@@ -180,12 +184,14 @@
 	1.	その他前各号に準ずるやむを得ない事由があったとき
 
 ## 第１９条	解雇の予告
-1.	前条により従業員を解雇する場合は、次の各号に掲げる者を除き、少なくとも30日前に本人に予告するか又は予告に代えて平均賃金の30日分以上の解雇予告手当を支払う。ただし、労働基準監督署長の認定を受けて本規定の第47条に定める懲戒解雇をする場合、及び次の各号のいずれかに該当する従業員を解雇する場合は、この限りでない。
+1.	前条により従業員を解雇する場合は、次の各号に掲げる者を除き、少なくとも30日前に本人に予告するか又は予告に代えて平均賃金の30日分以上の解雇予告手当を支払う。ただし、労働基準監督署長の認定を受けて本規定の第49条に定める懲戒解雇をする場合、及び次の各号のいずれかに該当する従業員を解雇する場合は、この限りでない。
 	1.	日々雇い入れられる者で、雇用期間が1か月を超えない者
 	1.	2か月以内の期間を定めて雇用した者
 	1.	試用期間中であって、採用日から14日以内の者
 	1.	本人の責めに帰すべき事由によって解雇する場合で、労働基準監督署長の認定を受けた者
 1.	前項によらず、天変事変等の事由のために事業の継続が不可能となり、労働基準監督署長の認定を受けた場合は、この限りではない。
+
+<div style="page-break-before:always"></div>
 
 # 第４章	服務
 
@@ -253,6 +259,8 @@
 	1.	会社や従業員、取引先や顧客個人を誹謗中傷した書き込みをしない。
 	1.	既に前号に該当する書き込みを行っている場合は、すみやかに削除する。
 
+<div style="page-break-before:always"></div>
+
 # 第５章	労働時間、休憩時間及び休日
 
 ## 第２５条	所定労働時間
@@ -277,7 +285,7 @@
 1.	第1項の規定に関わらず、業務の都合その他やむを得ない事由により、始業および終業の時刻並びに休憩時間を繰り上げ、または繰り下げることがある。ただしこの場合においても1日の勤務時間は第１項の時間を超えないこととする。
 
 ## 第２７条	専門業務型裁量労働制
-1.	第24条及び25条の規程によらず、会社は、正社員に対し、専門業務型裁量労働制を適用することがある。
+1.	第25条及び26条の規程によらず、会社は、正社員に対し、専門業務型裁量労働制を適用することがある。
 1.	専門業務型裁量労働制の適用に際し、労働基準法第38条の3に基づき、労使協定を締結し、労働基準監督署へ届け出なければならない。
 1.	前項により締結した労使協定を、就業規則に添付して就業規則の一部とし、本規則に定めのない場合は、当該協定の定める内容によるものとする。
 
@@ -305,7 +313,7 @@
 1.	業務の都合によりやむを得ない場合は、あらかじめ第１項の休日を他の日に振り替えることがある。この場合、原則として当該休日と同一週内の所定勤務日に振り替えるものとするが、やむを得ない場合は別途会社が指定する日に振り替えるものとする。なお振替により指定した休日に関しては無給とする。
 
 ## 第３１条	時間外及び休日労働
-1.	業務の都合により、第24条の所定労働時間を超え、又は第29条の休日に労働させることがある。従業員は正当な理由なく、これを拒んではならない。
+1.	業務の都合により、第25条の所定労働時間を超え、又は第30条の休日に労働させることがある。従業員は正当な理由なく、これを拒んではならない。
 1.	前項の場合、法定労働時間を超える労働又は法定休日における労働については、あらかじめ会社は従業員の過半数代表者と書面による労使協定を締結するとともに、これを所轄の労働基準監督署長に届け出るものとする。
 1.	小学校就学前の子を養育又は家族の介護を行う男女の従業員（指揮命令者および専門事務従事者は除く）で時間外労働を短いものとすることを申し出た者の法定の労働時間を超える労働については、前項の協定において別に定めるものとする。
 1.	妊娠中の女性、産後1年を経過しない女性従業員（以下「妊産婦」という）であって請求した者及び18歳未満の者については、第2項による時間外労働又は休日若しくは深夜（22時から5時まで）に労働させることはない
@@ -314,12 +322,14 @@
 1.	会社は、災害その他避けることのできない事由によって臨時の必要性がある場合には、労働基準法第33条の規定に基づき事前に所轄労働基準監督署長の許可を得ることにより、その必要の限度において法定労働時間を超えて、または法定休日および深夜に勤務を命じることができる。ただし、事態急迫のために所轄労働基準監督署長の許可を事前に受ける余裕のない場合においては、事後に遅滞なく届けるものとする。
 
 ## 第３２条	代休
-1.	会社は、従業員を第29条の休日に労働させた場合、代休を与えることがある。
+1.	会社は、従業員を第30条の休日に労働させた場合、代休を与えることがある。
 1.	賃金計算期間内の所定外労働時間が1日所定労働時間を超えている場合、会社は、所定外労働時間を代休に振り替えることがある。
 1.	急な傷病等のやむを得ない事由による欠勤は、本人が事後速やかに申し出たうえで会社が認めた場合に限り、代休に振り替えることができる。
 
 ## 第３３条	適用除外
 1.	前各条の規程にかかわらず、監督又は管理の地位にあるものについては、本章に定める労働時間、休憩、休日の適用を除外する。
+
+<div style="page-break-before:always"></div>
 
 # 第６章	休暇及び休業
 
@@ -333,7 +343,7 @@
 1.	年次有給休暇の最大保有日数は、前項による繰越も含め、年間最大40日までとする。
 1.	年次有給休暇の算定年度は４月１日から翌年３月３１日までとし、付与日を４月１日とする。
 1.	年次有給休暇の最小取得単位は、半日（1日の所定労働時間の50%）とする。但し、1日の所定労働時間が6時間未満、又は、第26条の専門業務型裁量労働制が適用されている従業員は、最小取得単位を1日とする。
-1.	第25条の始業・終業・休憩の時刻に従う従業員が、半日単位で年次有給休暇を取得する場合の就業時間は、次のとおりとする。ただし取得可能限度を4月に始まる年度内で10日分を限度とする。
+1.	第26条の始業・終業・休憩の時刻に従う従業員が、半日単位で年次有給休暇を取得する場合の就業時間は、次のとおりとする。ただし取得可能限度を4月に始まる年度内で10日分を限度とする。
 	1.	就業時間
 		-	午前休・・・１３時００分から１７時４５分を就業時間とする
 		-	午後休・・・９時００分から１２時００分を就業時間とする
@@ -344,6 +354,7 @@
 			-	実労働時間が6時間未満の場合 ・・・ 休憩なし
 1.	出勤率の算定に当たっては、年次有給休暇を取得した期間、産前産後の休業期間、育児休業、介護休業等育児又は家族介護を行う労働者の福祉に関する法律（以下「育児・介護休業法」という）に基づく育児・介護休業期間および業務上の傷病による休業期間は出勤したものとして取り扱う。
 1.	３日以上連続の年次有給休暇を取得しようとするときは、休暇予定日の２週間以上前に所属長に申し出て、休暇中の業務の引き継ぎや対応について相談を行い、休暇中の業務に支障がでないようにしなければならない。
+
 
 ※1項1号の算定表
 
@@ -423,19 +434,23 @@
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
 ## 第４３条	教育訓練休暇
-1.	会社は、労働者が自発的に教育訓練を受講する場合に教育訓練休暇を付与する。
-1.	教育訓練休暇を有給とし、1年間につき10日間付与する。
-1.  教育訓練休暇は、従業員から、自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する旨の申し出があった場合に、付与する。
+1.	会社は、従業員が自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する場合に、教育訓練休暇を付与する。教育訓練休暇は有給とし、1年間につき5日間を付与する。
+
+<div style="page-break-before:always"></div>
 
 # 第７章	賃金
 
 ## 第４４条	賃金
 1.	賃金は、別に定める賃金規定により支給するものとする。
 
+<div style="page-break-before:always"></div>
+
 # 第８章	福利厚生
 
 ## 第４５条	福利厚生
 1.	福利厚生は、別に定める福利厚生規定により提供するものとする。
+
+<div style="page-break-before:always"></div>
 
 # 第９章	表彰及び懲戒
 
@@ -463,7 +478,7 @@
 	1.	正当な理由なく、しばしば欠勤・遅刻・早退など勤務を怠ったとき
 	1.	過失により会社に損害を与えたとき
 	1.	素行不良で会社内の秩序又は風紀を乱したとき
-	1.	本規定及び第16条の服務規律に違反し、その事案が軽微なとき
+	1.	本規定及び第20条の服務規律に違反し、その事案が軽微なとき
 	1.	無届の方法により通勤していることが判明したとき
 
 ## 第４９条	論旨解雇又は懲戒解雇
@@ -498,11 +513,15 @@
 1.	従業員が故意または重大な過失により会社に損害を与えた場合、損害の一部または、全部を本人に賠償させることがある。ただしこれにより懲戒処分を免れるものではない。
 1.	当該損害賠償の責任は、退職後も免れることはできない。
 
+<div style="page-break-before:always"></div>
+
 # 第１０章	教育
 
 ## 第５１条	教育訓練
 1.	会社は、従業員に対し、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
-1.	従業員は、会社から教育訓練を受講するように指示された場合には、特段の事由がない限り指示された教育訓練を受けなければならない。
+1.	教育訓練休暇の取得日数については、第43条の定めに従う。
+
+<div style="page-break-before:always"></div>
 
 # 第１１章	安全衛生及び労災補償
 
@@ -550,25 +569,3 @@
 - 	本規則は、平成29年11月14日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
