初めての有給付与のタイミングを規定。

--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -341,7 +341,7 @@
 1.	急な傷病等のやむを得ない事由により欠勤は、本人が事後速やかに申し出たうえで会社が認めた場合に限り、年次有給休暇に振り替えることができる。
 1.	当該年度に行使しなかった年次有給休暇は、次年度に限り繰りこすことができる。
 1.	年次有給休暇の最大保有日数は、前項による繰越も含め、年間最大40日までとする。
-1.	年次有給休暇の算定年度は４月１日から翌年３月３１日までとし、付与日を４月１日とする。
+1.	年次有給休暇の算定年度は４月１日から翌年３月３１日までとし、付与日を４月１日とする。但し、入社後、最初の有給付与日は入社日から６カ月後とする。
 1.	年次有給休暇の最小取得単位は、半日（1日の所定労働時間の50%）とする。但し、1日の所定労働時間が6時間未満、又は、第26条の専門業務型裁量労働制が適用されている従業員は、最小取得単位を1日とする。
 1.	第26条の始業・終業・休憩の時刻に従う従業員が、半日単位で年次有給休暇を取得する場合の就業時間は、次のとおりとする。ただし取得可能限度を4月に始まる年度内で10日分を限度とする。
 	1.	就業時間
@@ -566,5 +566,6 @@
 # 附則
 -	本規則は、平成27年 4月 1日から施行する。
 - 	本規則は、平成29年12月 2日から改定施行する。
+- 	本規則は、平成30年 5月 9日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
