年末年始休暇を12/30〜1/3に修正。 夏季特別休暇（3日間）を追加。

--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -309,7 +309,7 @@
 		-	国民の休日（日曜日と重なったときは翌日）
 		-	年間休日カレンダーで定めた日
 		-	その他会社が指定する日
-		-	年末年始（12/31〜1/3）
+		-	年末年始（12/30〜1/3）
 1.	業務の都合によりやむを得ない場合は、あらかじめ第１項の休日を他の日に振り替えることがある。この場合、原則として当該休日と同一週内の所定勤務日に振り替えるものとするが、やむを得ない場合は別途会社が指定する日に振り替えるものとする。なお振替により指定した休日に関しては無給とする。
 
 ## 第３１条	時間外及び休日労働
@@ -436,25 +436,30 @@
 ## 第４３条	教育訓練休暇
 1.	会社は、従業員が自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する場合に、教育訓練休暇を付与する。教育訓練休暇は有給とし、1年間につき5日間を付与する。
 
+## 第４４条	夏季特別休暇
+1.	会社は、心身の健康増進、家庭生活の充実のため、夏季特別休暇を付与するい。夏季特別休暇は有給とし、夏季（7月1日〜9月30日）の間、3日間を付与する。
+1.	業務の都合により、前項の夏季休暇の取得日を会社が変更することがある。
+1.	夏季特別休暇は翌年に持ち越すことはできない。
+
 <div style="page-break-before:always"></div>
 
 # 第７章	賃金
 
-## 第４４条	賃金
+## 第４５条	賃金
 1.	賃金は、別に定める賃金規定により支給するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第８章	福利厚生
 
-## 第４５条	福利厚生
+## 第４６条	福利厚生
 1.	福利厚生は、別に定める福利厚生規定により提供するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第９章	表彰及び懲戒
 
-## 第４６条	表彰
+## 第４７条	表彰
 1.	会社は、従業員が次のいずれかに該当する場合、次の通り表彰する。
 	1.	業務上有益な創意工夫、改善を行い、会社の運営に貢献したとき
 	1.	永年にわたって誠実に勤務し、その成績が優秀で他の模範となるとき
@@ -463,7 +468,7 @@
 	1.	前各号に準ずる前項または功労のあったとき
 1.	表彰は、原則として会社の創立記念日に行う。
 
-## 第４７条	懲戒の種類
+## 第４８条	懲戒の種類
 1.	懲戒の種類及び程度は、次の通りとする。
 	-	けん責・・・始末書を提出させて将来を戒める
 	-	減給・・・始末書を提出させて減給する。ただし減給は1回の額が、平均賃金の1日分の5割を超えることなく、また総額が1賃金支払い期間における賃金の1割を超えることはない
@@ -472,7 +477,7 @@
 	-	論旨退職・・・退職届を提出するように勧告する。なお勧告した日から7日以内に退職届の提出がない場合は懲戒解雇とする
 	-	懲戒解雇・・・即時解雇する
 
-## 第４８条	けん責・減給・出勤停止又は降格
+## 第４９条	けん責・減給・出勤停止又は降格
 1.	従業員が次の各号のいずれかに該当するときは、けん責・減給・出勤停止・降格とする。
 	1.	正当な理由なく、当該無断欠勤をした日以前6ヶ月間の間にも連絡・断続を問わず無断欠勤が3日以上に及ぶ時
 	1.	正当な理由なく、しばしば欠勤・遅刻・早退など勤務を怠ったとき
@@ -481,7 +486,7 @@
 	1.	本規定及び第20条の服務規律に違反し、その事案が軽微なとき
 	1.	無届の方法により通勤していることが判明したとき
 
-## 第４９条	論旨解雇又は懲戒解雇
+## 第５０条	論旨解雇又は懲戒解雇
 1.	従業員が次の各号の一に応答した場合は、諭旨解雇又は懲戒解雇とする。懲戒解雇の場合において、労働基準監督署長の認定を受けた時は、労働基準法第20条に規程する予告手当は支給しない。但し、平素の勤務態度その他の情状によっては、普通解雇又は前条の処分とすることがある。
 	1.	重要な経歴を偽り、採用されたとき
 	1.	正当な理由なく、無断欠勤が以前6ヶ月間に連続・断続を問わず7日以上あり、出勤の督促に応じなかったとき
@@ -509,7 +514,7 @@
 	1.	この他本規則に違反し、又は前各号に準ずる不都合な行為があったとき
 1.	前項の規程による従業員の懲戒解雇に際し、従業員から請求があった場合は、懲戒解雇の理由を記載した文書を交付する。
 
-## 第５０条	損害賠償
+## 第５１条	損害賠償
 1.	従業員が故意または重大な過失により会社に損害を与えた場合、損害の一部または、全部を本人に賠償させることがある。ただしこれにより懲戒処分を免れるものではない。
 1.	当該損害賠償の責任は、退職後も免れることはできない。
 
@@ -517,7 +522,7 @@
 
 # 第１０章	教育
 
-## 第５１条	教育訓練
+## 第５２条	教育訓練
 1.	会社は、従業員に対し、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
 1.	教育訓練休暇の取得日数については、第43条の定めに従う。
 
@@ -525,7 +530,7 @@
 
 # 第１１章	安全衛生及び労災補償
 
-## 第５２条	遵守事項
+## 第５３条	遵守事項
 1.	会社は、従業員の安全衛生の確保及び改善を図り、快適な職場環境の形成のため必要な措置を講ずる。
 1.	従業員は、安全衛生に関する法令及び会社の指示を守り、会社と協力して労働災害の防止に努めなければならない。
 	1.	自衛消防隊を会社が組織する場合は必ず加入すること
@@ -534,14 +539,14 @@
 	1.	通路、階段、非常口及び消火設備のある場所に物品等を置かないこと
 	1.	前各号のほか、安全、防災に関する管理者の指示に従うこと
 
-## 第５３条	非常災害時の措置
+## 第５４条	非常災害時の措置
 1.	従業員は、災害その他非常災害の発生する危険を予知し、又は異常を発見したとき、直ちに所属長に通報し、臨機の措置をとらなければならない。
 1.	従業員は、火災その他非常災害が発生した場合は、互いに協力してその被害を最小限に留めるように努力して、顧客等の避難誘導等適切な措置を講じなければならない。
 
-## 第５４条	衛生に関する心得
+## 第５５条	衛生に関する心得
 1.	従業員は、健康の保持向上に努め、衛生管理者その他の関係者の指示に従い、会社の行う健康に関する施策の推進に協力し、かつ指示を励行しなければならない。
 
-## 第５５条	健康診断
+## 第５６条	健康診断
 1.	会社は、正社員に対して、採用の際及び毎年1回（深夜労働に従事する者は6か月ごとに1回）、定期に健康診断を行う。但し契約社員であっても、週所定労働時間が通常労働者の4分の3以上である者については同様に健康診断を行う。
 1.	前項によらず、従業員が採用前3か月以内に健康診断を実施し、その結果を証明する書類を提出した場合には、受診した項目について、採用時の健康診断を省略することができる。
 1.	従業員は、健康診断の結果に異常の所見がある場合には、再検査を受診しなければならない。
@@ -550,22 +555,23 @@
 	1.	会社の労務管理、賃金管理
 	1.	出向、転籍等のための人事管理
 
-## 第５６条	長時間従業員の面接指導
+## 第５７条	長時間従業員の面接指導
 1.	1月あたりの時間外労働が80時間を超え、疲労の蓄積が認められ又は健康上の不安を有している従業員から申出があった場合には、医師による面接指導を行う。
 
-## 第５７条	安全衛生教育
+## 第５８条	安全衛生教育
 1.	従業員に対し、採用の際及び配置換え等により作業内容を変更した際に、その従事する業務に必要な安全衛生教育を行う。
 
-## 第５８条	就業禁止等
+## 第５９条	就業禁止等
 1.	他人に伝染するおそれのある疾病にかかっている者または、疾病のため他人に害を及ぼすおそれのある者、その他医師が就業不適当と認めた者は就業させない。
 1.	従業員は、同居の家族または同居人が、他人に伝染するおそれのある疾病に罹り、またはその疑いのある場合、直ちに所属長に届け出て、必要な指示を受けなければならない。
 
-## 第５９条	災害補償
+## 第６０条	災害補償
 1.	従業員が業務上の事由又は通勤により負傷し、疾病にかかりまたは死亡した場合、労働基準法及び労働者災害補償保険法に定めるところにより災害補償を行う。
 
 # 附則
 -	本規則は、平成27年 4月 1日から施行する。
-- 	本規則は、平成29年12月 2日から改定施行する。
-- 	本規則は、平成30年 5月 9日から改定施行する。
+- 本規則は、平成29年12月 2日から改定施行する。
+- 本規則は、平成30年 5月 9日から改定施行する。
+-	本規則は、平成30年 7月 31日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
