--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -9,13 +9,16 @@
 ## 第３条	賃金の構成
 1.	賃金は、次の構成とする。
 	-	基本給
-	-	職能給
+	-	職能手当
 	-	役職手当
 	-	業務手当
+	- インセンティブ手当
 	-	通勤手当
+	- 資格手当
 	-	誕生日手当
 	-	家族誕生日手当
 	-	所定外労働手当
+
 
 ## 第４条	賃金の支払と控除
 1.	賃金は、本人に直接、通貨で支払う。但し、本人の同意がある場合は本人名義の銀行預金口座に振込み支払うものとする。
@@ -58,8 +61,8 @@
 ## 第１２条	基本給
 1.	基本給は、本人の年齢、学歴、勤続年数、勤務態度等により決定する。
 
-## 第１３条	職能給
-1.	職能給は、本人の職務内容、技能、経験、勤務成績等により決定する。
+## 第１３条	職能手当
+1.	職能手当は、本人の職務内容、技能、経験、勤務成績等により決定する。
 
 ## 第１４条	役職手当
 1.	役職手当は、管理監督者の地位にある従業員に対して、その職責に応じて支給する。
@@ -67,12 +70,19 @@
 1.	役職手当は、完全月給者・日給月給者を問わず、一賃金計算期間中において3日以上欠勤した場合は支給しない。
 
 ## 第１５条	業務手当
-1.	業務手当は、第19条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
+1.	業務手当は、第21条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
 1.	会社は、業務手当の支給額が何時間分の所定外賃金に相当するかを雇用契約書等により、あらかじめ明示しておかなければならない。
 1.	所定外労働手当の算出額が、業務手当の金額を超過する場合は、その超過額を所定外労働手当として、業務手当とは別に支給する。
 1.	前項に該当しない場合、所定外労働手当は支給しない。
 
-## 第１６条	通勤手当
+## 第１６条	インセンティブ手当
+1. インセンティブ手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
+
+## 第１７条	資格手当
+1.	資格手当は、会社が認めた資格を取得したことに対し支給額、支給期間を会社が定めて支給することがある。 。
+1.	資格手当は、入社後に取得した資格を対象とする。
+
+## 第１８条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	通勤手当は、次の上限額を超えないように支給する。
 		-	常勤正社員・契約社員の場合・・・30,000円
@@ -103,19 +113,19 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第１７条	誕生日手当
+## 第１９条	誕生日手当
 1.	誕生日手当は、本人の誕生日に5,000円支給する。
 1.	誕生日手当は、本人の誕生日が属する月の給与として支払う。
 1.	前各号の適用範囲は正社員とする。
 
-## 第１８条	家族誕生日手当
+## 第２０条	家族誕生日手当
 1.	家族誕生日手当は、従業員本人及び本人と同居する配偶者又は子の誕生日に1人に付き10,000円支給する。
 1.	誕生日手当は、配偶者及び子の誕生日が属する月の給与として支払う。
 1.	会社に対して家族構成の変更等の申請・連絡を行う。適切に行われていない場合は、協議を経ず会社の判断のみで支給を打ち切ることがある。
 1.	第３号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
 1.	前各号の適用範囲は正社員とする。
 
-## 第１９条	所定外労働手当
+## 第２１条	所定外労働手当
 1.	所定外労働手当は、次の労働時間の対価として支給する。
 	-	超過労働 ・・・ 雇用契約で定められた所定労働時間を超えた労働時間
 	-	法定外労働 ・・・ 労働基準法で定められた法定労働時間を超えて労働した時間
@@ -152,7 +162,7 @@
 		-	手当額 = 2号から5号により算出した手当額の総計
 1.	管理職に対しては、超過労働、法定外労働及び休日労働に係る所定外労働手当は、支給しない。
 
-## 第２０条	賃金の日割り計算
+## 第２２条	賃金の日割り計算
 1.	賃金計算期間の途中で入退社し、その期間の所定労働日数が月平均所定労働日数を下回る場合は、賃金を日割りして支給する。
 1.	前項によらず、新卒者及び会社がそれに準ずると判断した者が月初に入社する場合、入社月の賃金を日割りせずに支給することがある。
 1.	日割り計算を行う場合の賃金算出方法は、次のとおりとする。
@@ -168,7 +178,7 @@
 |家族誕生日手当|対象外|
 |所定外労働手当|対象外|
 
-## 第２１条	休職・休暇・欠勤等の賃金
+## 第２３条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したときに支払われる通常の賃金を支払う。
 1.	慶忌休暇期間は、第１項の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
@@ -183,7 +193,7 @@
 	1.	裁判員のための休暇期間・・・無給
 1.	就業規則第13条で定められた休職期間中は、賃金を支給しない。
 
-## 第２２条	休職・休暇・欠勤等による賃金減額
+## 第２４条	休職・休暇・欠勤等による賃金減額
 1.	就業規則で無給と定められた休職・休暇・欠勤・遅刻・早退等については、当該の不就労時間の賃金を減額して支給する。
 1.	賃金の減額計算は、所定外労働手当以外の賃金項目に対して行う。
 1.	減額支給を行う場合の賃金算出方法は、次のとおりとする。
@@ -193,39 +203,51 @@
 		-	減額対象の賃金 × (労働時間 ÷ 月平均所定労働時間)　+ 減額対象外の賃金
 	-	減額対象となる賃金項目は、前条第3項の日割り計算対象の定めに従うものとする。
 
-## 第２３条	臨時休業の賃金
+## 第２５条	臨時休業の賃金
 1.	会社の都合により、所定労働日に従業員を休業させた場合、休業１日につき労働基準法第12条に規定する平均賃金の60％を支給する。ただし１日のうち一部休業させた場合は、労働基準法第26条に定めるところにより、平均賃金の6割に相当する賃金を保障する。
 
-## 第２４条	非常時払い
+## 第２６条	非常時払い
 1.	従業員又はその収入によって生計を維持する者が、次のいずれかに該当し、その費用に当てるため、従業員から請求があったときは、その都度、そのときまでの労働に対する賃金を支払う。
 	1.	出産、疾病または、災害の場合
 	1.	退職または、解雇により離職した場合
 	1.	結婚または、死亡の場合
 	1.	前項の定めによらず会社が特別に認めた場合
 
+## 第２７条	賞与
+1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
+1. 評価対象期間は次の通りとして、支給日当日に会社に在籍し、かつ評価対象期間に通常に勤務していた者について支払うこととする。
+	1. 賞与支給月　7月：評価対象期間　前年10月1日から当年3月31日
+	1. 賞与支給月　12月：評価対象期間　当年4月1日から当年9月30日
+
 <div style="page-break-before:always"></div>
 
 # 第３章	嘱託社員の賃金
 
-## 第２５条	本章の適用範囲
+## 第２８条	本章の適用範囲
 1.	本章に定める賃金規定は、就業規則第2条に定める嘱託社員に対して適用する。
 
-## 第２６条	賃金の支払形態
+## 第２９条	賃金の支払形態
 1.	賃金の支払形態は、時給月給制によるものとする。
 
-## 第２７条	基本給
+## 第３０条	基本給
 1.	基本給は、本人の年齢、学歴、勤続年数、勤務態度等により決定する。
 
-## 第２８条	職能給
-1.	職能給は支給しない。
+## 第３１条	職能手当
+1.	職能手当は支給しない。
 
-## 第２９条	役職手当
+## 第３２条	役職手当
 1.	役職手当は支給しない。
 
-## 第３０条	業務手当
+## 第３３条	業務手当
 1.	業務手当は支給しない。
 
-## 第３１条	通勤手当
+## 第３４条	インセンティブ手当
+1. インセンティブ手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
+
+## 第３５条	資格手当
+1.	資格手当は、支給しない。
+
+## 第３６条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	公共交通機関を利用して通勤する場合、次の通り算定する。
 		-	会社が合理的であると認めた通勤経理・方法に限り、交通費を実費支給する。
@@ -252,16 +274,16 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第３２条	誕生日手当
+## 第３７条	誕生日手当
 1.	誕生日手当は、支給しない。
 
-## 第３３条	家族誕生日手当
+## 第３８条	家族誕生日手当
 1.	家族誕生日手当は、支給しない。
 
-## 第３４条	所定外労働手当
+## 第３９条	所定外労働手当
 1.	所定外労働手当は、第19条の定めに従う。但し、手当の算出における時間単価は、雇用契約による時給額とする。
 
-## 第３５条	休職・休暇・欠勤等の賃金
+## 第４０条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したあときに支払われる通常の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
 	1.	産前産後の休業期間・・・無給
@@ -275,9 +297,13 @@
 	1.	裁判員のための休暇期間・・・無給
 	1.	慶忌休暇・・・無給
 
+## 第４１条	賞与
+賞与は、支給しない。
+
 # 附則
 -	本規則は、平成27年 4月 1日から施行する。
 - 本規則は、平成29年 8月15日から改定施行する。
+- 本規則は、平成30年12月11日から改定施行する。
 -	月平均所定労働日数は、次の通り算定する。
 	-	年間労働日数 = 年間暦日数（365日又は366日）— 年間休日合計数
 	-	年間所定労働時間 = 年間労働日数 × 7時間45分
