--- a/03_福利厚生.md
+++ b/03_福利厚生.md
@@ -47,21 +47,7 @@
 	-	その他、会社が補助することが妥当であると判断した費用
 1.	補助額は、原則として1月につき5,000円を上限とし、その額は都度会社が決定する。但し、採用活動及び営業活動に貢献することが見込まれると会社が判断した場合は、この上限額を超えて補助することがある。
 
-## 第８条	パソコン購入補助
-1.	パソコン購入補助は、従業員が新技術に触れる機会を増やし、新たなサービスやアイデアの創出を促すこと及び業務利用のために購入するパソコンの代金を補助するものである。
-1.	パソコン購入補助は、原則として技能職に従事している従業員（エンジニア、デザイナー等）のみを対象とする。
-1.	パソコン購入補助を希望する従業員は、会社に事前申請し、承認を得なければならない。
-1.	会社は、会社の業績等により、補助を認めないことがある。
-1.	補助対象費用は、次の通りとする。
-
-
-|購入金額|支援金額|||
-|:--|:--|:--|:--|
-||WindowsOS|MacOS|その他OS|
-|99,999円迄|購入金額の35%|購入金額の50%|購入金額の35%|
-|100,000円以上|35,000円|50,000円|35,000円|
-
-## 第９条	予防接種補助
+## 第８条	予防接種補助
 1.	予防接種補助は、従業員の健康維持を目的とするものである。
 1.	従業員本人及び本人と同居する配偶者又は子が、次のいずれかの予防接種を自費で受け、本人から届け出があった場合、その費用を会社が負担する。
 	-	インフルエンザ
@@ -75,3 +61,4 @@
 # 附則
 -	本規則は、平成27年 4月 1日から施行する。
 - 本規則は、平成29年 8月15日から改定施行する。
+- 本規則は、平成30年12月11日から改定施行する。
