--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -1,3 +1,8 @@
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<div style="text-align:center; width:auto;"><h1>賃金規定</h1></div>
+<div style="text-align:right; width:auto;"><h4>株式会社アウルキャンプ</h4></div>
+<div style="page-break-before:always"></div>
+
 # 第１章		総則
 
 ## 第１条	目的
@@ -216,8 +221,8 @@
 ## 第２７条	賞与
 1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
 1. 評価対象期間は次の通りとして、支給日当日に会社に在籍し、かつ評価対象期間に通常に勤務していた者について支払うこととする。
-	1. 賞与支給月　7月：評価対象期間　前年10月1日から当年3月31日
-	1. 賞与支給月　12月：評価対象期間　当年4月1日から当年9月30日
+	1. 賞与支給月 7月：評価対象期間 前年10月1日から当年3月31日
+	1. 賞与支給月 12月：評価対象期間 当年4月1日から当年9月30日
 
 <div style="page-break-before:always"></div>
 
