--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -176,10 +176,13 @@
 |賃金項目|日割り計算|
 |:--|:--|
 |基本給|対象|
-|職能給|対象|
+|職能手当|対象|
+|役職手当|対象|
 |業務手当|対象|
+|インセンティブ手当|対象外|
 |通勤手当|対象外（第15条の定めに従う）|
 |誕生日手当|対象外|
+|資格手当|対象外|
 |家族誕生日手当|対象外|
 |所定外労働手当|対象外|
 
