賞与の支給月間違いを修正。

--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -16,12 +16,12 @@
 	-	基本給
 	-	職能手当
 	-	役職手当
+	- 技術手当
 	-	業務手当
-	- インセンティブ手当
+	- 調整手当
 	-	通勤手当
 	- 資格手当
-	-	誕生日手当
-	-	家族誕生日手当
+	-	家族手当
 	-	所定外労働手当
 
 
@@ -74,18 +74,25 @@
 1.	役職手当は、事由が発生した賃金計算期間から支給を開始し、役職に該当しなくなった賃金計算期間まで支給する。
 1.	役職手当は、完全月給者・日給月給者を問わず、一賃金計算期間中において3日以上欠勤した場合は支給しない。
 
+## 第１５条	技術手当
+1.	技術手当は、本人の技能、経験、及び会社の業績等に応じて各人毎に決定する。
+1.	技術手当は、原則として毎年４月に見直しを実施し、５月分給与の支払い分より改定する。
+1.	技術手当は、前項にかかわらず、会社が特に必要があると認めた場合には、臨時に技術手当の見直しを行うことがある。
+1.	技術手当は、社会環境、技術環境、会社の営業環境等の変遷により保有技能が会社の求めるところと適合しなくなった場合、降給となることがある。
+
 ## 第１５条	業務手当
 1.	業務手当は、第21条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
 1.	会社は、業務手当の支給額が何時間分の所定外賃金に相当するかを雇用契約書等により、あらかじめ明示しておかなければならない。
 1.	所定外労働手当の算出額が、業務手当の金額を超過する場合は、その超過額を所定外労働手当として、業務手当とは別に支給する。
 1.	前項に該当しない場合、所定外労働手当は支給しない。
 
-## 第１６条	インセンティブ手当
-1. インセンティブ手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
+## 第１６条	調整手当
+1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
 
 ## 第１７条	資格手当
-1.	資格手当は、会社が認めた資格を取得したことに対し支給額、支給期間を会社が定めて支給することがある。 。
+1.	資格手当は、会社が認めた資格を取得したことに対し支給額、支給期間を会社が定めて支給することがある。
 1.	資格手当は、入社後に取得した資格を対象とする。
+1.	資格手当の対象となる資格を新たに取得した場合は、資格を証する書類の原本を提示し、写しを会社に提出し届出ることとする。
 
 ## 第１８条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
@@ -118,16 +125,19 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第１９条	誕生日手当
-1.	誕生日手当は、本人の誕生日に5,000円支給する。
-1.	誕生日手当は、本人の誕生日が属する月の給与として支払う。
-1.	前各号の適用範囲は正社員とする。
-
-## 第２０条	家族誕生日手当
-1.	家族誕生日手当は、従業員本人及び本人と同居する配偶者又は子の誕生日に1人に付き10,000円支給する。
-1.	誕生日手当は、配偶者及び子の誕生日が属する月の給与として支払う。
+## 第１９条	家族手当
+1.	家族手当は、賃金締切日の前月の末日において健康保険の被扶養者かつ従業員本人及び本人と同居する配偶者又は子（養子・実子を問わず）を有する従業員に対し、区分に従い支給する。（別表１を参照）
+1.	前項に定める子については、満１８歳に達した日もしくは資格喪失した日が属する月まで支給対象とする。
 1.	会社に対して家族構成の変更等の申請・連絡を行う。適切に行われていない場合は、協議を経ず会社の判断のみで支給を打ち切ることがある。
 1.	第３号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
+1.	前各号の適用範囲は正社員とする。
+
+## 第２０条	住宅手当
+1.	住宅手当は、自ら居住する住宅を要するために家賃または住宅ローンを負担している従業員に対し、別表１に定める額を支給する。
+1.	前項に計算において1,000円未満の端数が生じた時は、1,000円単位に切り上げる。
+1.	住宅手当の算定は前年12月末時点において最も新しい月額家賃を証する書類（以下証明書類という）を１月１５日までに会社に提出するものとし、それに基づき１月２５日支払い分から１年間の住宅手当の額を決定する。ただし、月額家賃を証する書類については、前回提出時と変更がなく、その旨を書面で申し出て、会社が認めた場合は提出を省略することができる。
+1.	引っ越し、その他の事由により、前項により提出した書類に変更があった場合は、事由の生じた日の属する賃金計算期間の末日までに変更後の証明書類を添付して会社に届けでること。会社はそれに基づき、翌月支払い分から新たに算定した住宅手当を支給する。
+1.	前各号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
 1.	前各号の適用範囲は正社員とする。
 
 ## 第２１条	所定外労働手当
@@ -178,12 +188,12 @@
 |基本給|対象|
 |職能手当|対象|
 |役職手当|対象|
+|技術手当|対象外|
 |業務手当|対象|
-|インセンティブ手当|対象外|
+|調整手当|対象外|
 |通勤手当|対象外（第15条の定めに従う）|
-|誕生日手当|対象外|
+|家族手当|対象外|
 |資格手当|対象外|
-|家族誕生日手当|対象外|
 |所定外労働手当|対象外|
 
 ## 第２３条	休職・休暇・欠勤等の賃金
@@ -224,7 +234,7 @@
 ## 第２７条	賞与
 1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
 1. 評価対象期間は次の通りとして、支給日当日に会社に在籍し、かつ評価対象期間に通常に勤務していた者について支払うこととする。
-	1. 賞与支給月 7月：評価対象期間 前年10月1日から当年3月31日
+	1. 賞与支給月 6月：評価対象期間 前年10月1日から当年3月31日
 	1. 賞与支給月 12月：評価対象期間 当年4月1日から当年9月30日
 
 <div style="page-break-before:always"></div>
@@ -240,8 +250,8 @@
 ## 第３０条	基本給
 1.	基本給は、本人の年齢、学歴、勤続年数、勤務態度等により決定する。
 
-## 第３１条	職能手当
-1.	職能手当は支給しない。
+## 第３１条	職能給
+1.	職能給は支給しない。
 
 ## 第３２条	役職手当
 1.	役職手当は支給しない。
@@ -249,8 +259,8 @@
 ## 第３３条	業務手当
 1.	業務手当は支給しない。
 
-## 第３４条	インセンティブ手当
-1. インセンティブ手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
+## 第３４条	調整手当
+1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
 
 ## 第３５条	資格手当
 1.	資格手当は、支給しない。
@@ -282,11 +292,11 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第３７条	誕生日手当
-1.	誕生日手当は、支給しない。
+## 第３７条	家族手当
+1.	家族手当は、支給しない。
 
-## 第３８条	家族誕生日手当
-1.	家族誕生日手当は、支給しない。
+## 第３８条	住宅手当
+1.	住宅手当は、支給しない。
 
 ## 第３９条	所定外労働手当
 1.	所定外労働手当は、第19条の定めに従う。但し、手当の算出における時間単価は、雇用契約による時給額とする。
