--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -383,7 +383,7 @@
 1.	採用時特別休暇の最小取得単位は、1日とする。
 1.	採用時特別休暇の取得期間は有給とし、出勤率算定の際は通常の勤務をしたものとみなす。
 
-## 第３７条	慶忌休暇
+## 第３８条	慶忌休暇
 1.	従業員が次のいずれかに該当する事由により休暇を申請した場合には、慶弔休暇を与える。
 	1.	本人が結婚するとき・・・最大5日
 	1.	子女が結婚するとき・・・最大2日
@@ -395,14 +395,14 @@
 1.	慶弔休暇の取得期間のうち、所定労働日に限っては、有給とし、出勤率算定の際は通常勤務したものとみなす。
 1.	本人が結婚する場合に対しての慶弔休暇は、1回の取得を上限とする。
 
-## 第３８条	産前産後の休業
+## 第３９条	産前産後の休業
 1.	６週間（多胎妊娠の場合は14週間）以内に出産する予定の女性従業員から請求があったときは、休業させる。
 1.	産後8週間を経過していない女性従業員は、就業させない。
 1.	前項の規程にかかわらず、産後6週間を経過した女性従業員から請求があった場合は、その者について医師が、支障がないと認めた業務に就かせることがある。
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
-## 第３９条	母性健康管理のための休暇等
+## 第４０条	母性健康管理のための休暇等
 1.	妊娠中又は出産後１年を経過しない女性従業員から、所定労働時間内に、母子保健法に基づく保健指導又は健康診査を受けるために申出があったときは、次の範囲で時間内通院を認める。
 	1.	産前の場合
 		-	妊娠２３週まで・・・4週に1回
@@ -418,7 +418,7 @@
 1.	本条による休暇期間及び休憩時間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務したものとみなす。
 
-## 第４０条	育児・介護休業、子の看護休業等
+## 第４１条	育児・介護休業、子の看護休業等
 1.	小学校就学前の子を養育する従業員は、4月に始まる年度内に子供1人については5日の範囲内で、2人以上の場合は10日の範囲内で子の看護又は子に予防接種・健康診断を受けさせるために休暇を取得することができる。
 1.	家族を介護する従業員は、介護する家族1人については5日の範囲内で、2人以上の場合は10日の範囲内で家族の介護のために休暇を取得することができる。
 1.	子の看護及び家族の介護休暇の取得を希望する者は、会社に請求をしなければならない。
@@ -426,26 +426,26 @@
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 1.	育児・介護休業については、法定どおりとする。
 
-## 第４１条	育児時間
+## 第４２条	育児時間
 1.	1歳に満たない子を養育する女性従業員から請求があったときは、休憩時間のほか1日について2回、1回について30分の育児時間を与える。
 1.	育児時間に対する賃金は無給とする。
 
-## 第４２条	生理休暇
+## 第４３条	生理休暇
 1.	生理日の就業が著しく困難な女性従業員から請求があったときは、必要な期間休暇を与える。
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす
 
-## 第４３条	公民権行使等休暇
+## 第４４条	公民権行使等休暇
 1.	従業員が裁判員もしくは補充裁判員となった場合または、裁判員候補者（以下「裁判員等」という）となった場合には、次の通り休暇を与える。ただし裁判員等になった旨を示す裁判所からの通知等を提出するものとする。ただし権利の行使または、公の職務の執行に妨げが無い限り、請求された時刻を変更することがある。
 	1.	裁判員または補充裁判員となった場合・・・必要な日数
 	1.	裁判員候補者となった場合・・・必要な時間
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
-## 第４４条	教育訓練休暇
+## 第４５条	教育訓練休暇
 1.	会社は、従業員が自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する場合に、教育訓練休暇を付与する。教育訓練休暇は有給とし、1年間につき5日間を付与する。
 
-## 第４５条	夏季特別休暇
+## 第４６条	夏季特別休暇
 1.	会社は、心身の健康増進、家庭生活の充実のため、夏季特別休暇を付与するい。夏季特別休暇は有給とし、夏季（7月1日〜9月30日）の間、3日間を付与する。
 1.	業務の都合により、前項の夏季休暇の取得日を会社が変更することがある。
 1.	夏季特別休暇は翌年に持ち越すことはできない。
@@ -454,21 +454,21 @@
 
 # 第７章	賃金
 
-## 第４６条	賃金
+## 第４７条	賃金
 1.	賃金は、別に定める賃金規定により支給するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第８章	福利厚生
 
-## 第４７条	福利厚生
+## 第４８条	福利厚生
 1.	福利厚生は、別に定める福利厚生規定により提供するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第９章	表彰及び懲戒
 
-## 第４８条	表彰
+## 第４９条	表彰
 1.	会社は、従業員が次のいずれかに該当する場合、次の通り表彰する。
 	1.	業務上有益な創意工夫、改善を行い、会社の運営に貢献したとき
 	1.	永年にわたって誠実に勤務し、その成績が優秀で他の模範となるとき
@@ -477,7 +477,7 @@
 	1.	前各号に準ずる前項または功労のあったとき
 1.	表彰は、原則として会社の創立記念日に行う。
 
-## 第４９条	懲戒の種類
+## 第５０条	懲戒の種類
 1.	懲戒の種類及び程度は、次の通りとする。
 	-	けん責・・・始末書を提出させて将来を戒める
 	-	減給・・・始末書を提出させて減給する。ただし減給は1回の額が、平均賃金の1日分の5割を超えることなく、また総額が1賃金支払い期間における賃金の1割を超えることはない
@@ -486,7 +486,7 @@
 	-	論旨退職・・・退職届を提出するように勧告する。なお勧告した日から7日以内に退職届の提出がない場合は懲戒解雇とする
 	-	懲戒解雇・・・即時解雇する
 
-## 第５０条	けん責・減給・出勤停止又は降格
+## 第５１条	けん責・減給・出勤停止又は降格
 1.	従業員が次の各号のいずれかに該当するときは、けん責・減給・出勤停止・降格とする。
 	1.	正当な理由なく、当該無断欠勤をした日以前6ヶ月間の間にも連絡・断続を問わず無断欠勤が3日以上に及ぶ時
 	1.	正当な理由なく、しばしば欠勤・遅刻・早退など勤務を怠ったとき
@@ -495,7 +495,7 @@
 	1.	本規定及び第21条の服務規律に違反し、その事案が軽微なとき
 	1.	無届の方法により通勤していることが判明したとき
 
-## 第５１条	論旨解雇又は懲戒解雇
+## 第５２条	論旨解雇又は懲戒解雇
 1.	従業員が次の各号の一に応答した場合は、諭旨解雇又は懲戒解雇とする。懲戒解雇の場合において、労働基準監督署長の認定を受けた時は、労働基準法第20条に規程する予告手当は支給しない。但し、平素の勤務態度その他の情状によっては、普通解雇又は前条の処分とすることがある。
 	1.	重要な経歴を偽り、採用されたとき
 	1.	正当な理由なく、無断欠勤が以前6ヶ月間に連続・断続を問わず7日以上あり、出勤の督促に応じなかったとき
@@ -523,7 +523,7 @@
 	1.	この他本規則に違反し、又は前各号に準ずる不都合な行為があったとき
 1.	前項の規程による従業員の懲戒解雇に際し、従業員から請求があった場合は、懲戒解雇の理由を記載した文書を交付する。
 
-## 第５２条	損害賠償
+## 第５３条	損害賠償
 1.	従業員が故意または重大な過失により会社に損害を与えた場合、損害の一部または、全部を本人に賠償させることがある。ただしこれにより懲戒処分を免れるものではない。
 1.	当該損害賠償の責任は、退職後も免れることはできない。
 
@@ -531,15 +531,15 @@
 
 # 第１０章	教育
 
-## 第５３条	教育訓練
+## 第５４条	教育訓練
 1.	会社は、従業員に対し、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
-1.	教育訓練休暇の取得日数については、第44条の定めに従う。
+1.	教育訓練休暇の取得日数については、第45条の定めに従う。
 
 <div style="page-break-before:always"></div>
 
 # 第１１章	安全衛生及び労災補償
 
-## 第５４条	遵守事項
+## 第５５条	遵守事項
 1.	会社は、従業員の安全衛生の確保及び改善を図り、快適な職場環境の形成のため必要な措置を講ずる。
 1.	従業員は、安全衛生に関する法令及び会社の指示を守り、会社と協力して労働災害の防止に努めなければならない。
 	1.	自衛消防隊を会社が組織する場合は必ず加入すること
@@ -548,14 +548,14 @@
 	1.	通路、階段、非常口及び消火設備のある場所に物品等を置かないこと
 	1.	前各号のほか、安全、防災に関する管理者の指示に従うこと
 
-## 第５５条	非常災害時の措置
+## 第５６条	非常災害時の措置
 1.	従業員は、災害その他非常災害の発生する危険を予知し、又は異常を発見したとき、直ちに所属長に通報し、臨機の措置をとらなければならない。
 1.	従業員は、火災その他非常災害が発生した場合は、互いに協力してその被害を最小限に留めるように努力して、顧客等の避難誘導等適切な措置を講じなければならない。
 
-## 第５６条	衛生に関する心得
+## 第５７条	衛生に関する心得
 1.	従業員は、健康の保持向上に努め、衛生管理者その他の関係者の指示に従い、会社の行う健康に関する施策の推進に協力し、かつ指示を励行しなければならない。
 
-## 第５７条	健康診断
+## 第５８条	健康診断
 1.	会社は、正社員に対して、採用の際及び毎年1回（深夜労働に従事する者は6か月ごとに1回）、定期に健康診断を行う。但し契約社員であっても、週所定労働時間が通常労働者の4分の3以上である者については同様に健康診断を行う。
 1.	前項によらず、従業員が採用前3か月以内に健康診断を実施し、その結果を証明する書類を提出した場合には、受診した項目について、採用時の健康診断を省略することができる。
 1.	従業員は、健康診断の結果に異常の所見がある場合には、再検査を受診しなければならない。
@@ -564,17 +564,17 @@
 	1.	会社の労務管理、賃金管理
 	1.	出向、転籍等のための人事管理
 
-## 第５８条	長時間従業員の面接指導
+## 第５９条	長時間従業員の面接指導
 1.	1月あたりの時間外労働が80時間を超え、疲労の蓄積が認められ又は健康上の不安を有している従業員から申出があった場合には、医師による面接指導を行う。
 
-## 第５９条	安全衛生教育
+## 第６０条	安全衛生教育
 1.	従業員に対し、採用の際及び配置換え等により作業内容を変更した際に、その従事する業務に必要な安全衛生教育を行う。
 
-## 第６０条	就業禁止等
+## 第６１条	就業禁止等
 1.	他人に伝染するおそれのある疾病にかかっている者または、疾病のため他人に害を及ぼすおそれのある者、その他医師が就業不適当と認めた者は就業させない。
 1.	従業員は、同居の家族または同居人が、他人に伝染するおそれのある疾病に罹り、またはその疑いのある場合、直ちに所属長に届け出て、必要な指示を受けなければならない。
 
-## 第６１条	災害補償
+## 第６２条	災害補償
 1.	従業員が業務上の事由又は通勤により負傷し、疾病にかかりまたは死亡した場合、労働基準法及び労働者災害補償保険法に定めるところにより災害補償を行う。
 
 # 附則
@@ -583,5 +583,6 @@
 - 本規則は、平成30年 5月 9日から改定施行する。
 -	本規則は、平成30年 7月 31日から改定施行する。
 -	本規則は、平成30年12月 11日から改定施行する。
+-	本規則は、令和 1年 5月  1日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
