--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -19,6 +19,9 @@
 	- 技術手当
 	-	業務手当
 	- 調整手当
+	- 食事手当
+	- 住宅手当
+	- 家族手当
 	-	通勤手当
 	- 資格手当
 	-	家族手当
@@ -41,7 +44,7 @@
 1.	本規程に定める賃金の計算にあたり、円位未満の端数が生じた時はいずれもその端数を切り上げる。
 
 ## 第７条	昇給・降給
-1.	昇給及び降給は、原則として毎年4月1日及び試用期間の満了時に辞令を出し、次の賃金計算期間の賃金より反映する。但し、会社の業績やその他やむを得ない事由がある場合には、この限りではない。
+1.	昇給及び降給は、原則として毎年5月1日及び試用期間の満了時に辞令を出し、次の賃金計算期間の賃金より反映する。但し、会社の業績やその他やむを得ない事由がある場合には、この限りではない。
 1.	昇給額及び降給額は、本人の職務内容、貢献や多大な功労、期待する役割、技能、経験、勤務成績、勤務態度及び会社の業績等に応じて各人毎に決定する。
 1.	技能職に従事している従業員（エンジニア、デザイナー等）については、社会環境、技術環境、会社の営業環境等の変遷により保有技能が会社の求めるところと適合しなくなった場合、降給となることがある。
 
@@ -58,7 +61,6 @@
 
 ## 第１０条	本章の適用範囲
 1.	本章に定める賃金規定は、就業規則第2条に定める正社員及び契約社員に対して適用する。
-1.	試用期間中の正社員及び契約社員については、第17条及び18条は適用しない。
 
 ## 第１１条	賃金の支払形態
 1.	賃金の支払形態は、日給月給制によるものとする。
@@ -80,21 +82,33 @@
 1.	技術手当は、前項にかかわらず、会社が特に必要があると認めた場合には、臨時に技術手当の見直しを行うことがある。
 1.	技術手当は、社会環境、技術環境、会社の営業環境等の変遷により保有技能が会社の求めるところと適合しなくなった場合、降給となることがある。
 
-## 第１５条	業務手当
-1.	業務手当は、第21条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
+## 第１６条	業務手当
+1.	業務手当は、第23条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
 1.	会社は、業務手当の支給額が何時間分の所定外賃金に相当するかを雇用契約書等により、あらかじめ明示しておかなければならない。
 1.	所定外労働手当の算出額が、業務手当の金額を超過する場合は、その超過額を所定外労働手当として、業務手当とは別に支給する。
 1.	前項に該当しない場合、所定外労働手当は支給しない。
 
-## 第１６条	調整手当
+## 第１７条	調整手当
 1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
 
-## 第１７条	資格手当
+## 第１８条	食事手当
+1. 食事手当は、月額3,500円を支給する。
+1. 出勤日数が、所定就業日数の８割未満である場合は、食事手当に次の率を乗じた金額を支給する。
+
+|出勤日数|掛率|
+|:---|---:|
+|出勤日数が所定就業日数の8割以上|100％|
+|出勤日数が所定就業日数の5割以上8割未満|70％|
+|出勤日数が所定就業日数の3割以上5割未満|40％|
+|出勤日数が所定就業日数の3割未満|20％|
+|出勤日数がない場合|0％|
+
+## 第１９条	資格手当
 1.	資格手当は、会社が認めた資格を取得したことに対し支給額、支給期間を会社が定めて支給することがある。
 1.	資格手当は、入社後に取得した資格を対象とする。
 1.	資格手当の対象となる資格を新たに取得した場合は、資格を証する書類の原本を提示し、写しを会社に提出し届出ることとする。
 
-## 第１８条	通勤手当
+## 第２０条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	通勤手当は、次の上限額を超えないように支給する。
 		-	常勤正社員・契約社員の場合・・・30,000円
@@ -125,30 +139,47 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第１９条	家族手当
-1.	家族手当は、賃金締切日の前月の末日において健康保険の被扶養者かつ従業員本人及び本人と同居する配偶者又は子（養子・実子を問わず）を有する従業員に対し、区分に従い支給する。（別表１を参照）
-1.	前項に定める子については、満１８歳に達した日もしくは資格喪失した日が属する月まで支給対象とする。
-1.	会社に対して家族構成の変更等の申請・連絡を行う。適切に行われていない場合は、協議を経ず会社の判断のみで支給を打ち切ることがある。
-1.	第３号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
-1.	前各号の適用範囲は正社員とする。
+## 第２１条	家族手当
+1.	家族手当は、賃金締切日の前月の末日において健康保険の被扶養者かつ従業員本人及び本人と同居する配偶者又は子（養子・実子を問わず）を有する従業員に対し、区分に従い次のとおり支給する。
 
-## 第２０条	住宅手当
-1.	住宅手当は、自ら居住する住宅を要するために家賃または住宅ローンを負担している従業員に対し、別表１に定める額を支給する。
-1.	前項に計算において1,000円未満の端数が生じた時は、1,000円単位に切り上げる。
-1.	住宅手当の算定は前年12月末時点において最も新しい月額家賃を証する書類（以下証明書類という）を１月１５日までに会社に提出するものとし、それに基づき１月２５日支払い分から１年間の住宅手当の額を決定する。ただし、月額家賃を証する書類については、前回提出時と変更がなく、その旨を書面で申し出て、会社が認めた場合は提出を省略することができる。
-1.	引っ越し、その他の事由により、前項により提出した書類に変更があった場合は、事由の生じた日の属する賃金計算期間の末日までに変更後の証明書類を添付して会社に届けでること。会社はそれに基づき、翌月支払い分から新たに算定した住宅手当を支給する。
-1.	前各号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
-1.	前各号の適用範囲は正社員とする。
+|健康保険の被扶養者|月額|
+|:------:|---------:|
+|配偶者|10,000円|
+|第一子|2,000円|
+|第二子|1,500円|
+|第三子以降|1,000円|
 
-## 第２１条	所定外労働手当
+2.	前項に定める子については、満１８歳に達した日もしくは資格喪失した日が属する月まで支給対象とする。
+3.	会社に対して家族構成の変更等の申請・連絡を行う。適切に行われていない場合は、協議を経ず会社の判断のみで支給を打ち切ることがある。
+4.	第３号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
+
+## 第２２条	住宅手当
+1.	住宅手当は、自ら居住する住宅を要するために家賃または住宅ローンを負担している従業員に対し、次に定める額を支給する。
+
+|住宅区分|住宅手当額|
+|:------:|:---------|
+|賃貸|月の家賃と管理費を合計した金額。|
+|持家|住宅ローンの月額支払い金額と管理費を合計した金額。ただし駐輪場、修繕積立金などは除く。|
+
+|家賃|月額|
+|:------:|---------:|
+|〜59,999円|15,000円|
+|60,000〜89,999円|20,000円|
+|90,000〜円|25,000円|
+
+2.	住宅手当の算定は前年12月末時点において最も新しい月額家賃を証する書類（以下証明書類という）を１月１５日までに会社に提出するものとし、それに基づき１月２５日支払い分から１年間の住宅手当の額を決定する。ただし、月額家賃を証する書類については、前回提出時と変更がなく、その旨を書面で申し出て、会社が認めた場合は提出を省略することができる。
+3.	引っ越し、その他の事由により、前項により提出した書類に変更があった場合は、事由の生じた日の属する賃金計算期間の末日までに変更後の証明書類を添付して会社に届けでること。会社はそれに基づき、翌月支払い分から新たに算定した住宅手当を支給する。
+4.	前各号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
+
+## 第２３条	所定外労働手当
 1.	所定外労働手当は、次の労働時間の対価として支給する。
 	-	超過労働 ・・・ 雇用契約で定められた所定労働時間を超えた労働時間
 	-	法定外労働 ・・・ 労働基準法で定められた法定労働時間を超えて労働した時間
 	-	深夜労働 ・・・ 深夜（22時から5時）に労働した時間
 	-	休日労働 ・・・ 就業規則第30条で定められた法定休日に労働した時間
-1.	所定外労働手当は、次のとおり算定し、支給する。但し、業務手当を支給される従業員については、第15条の定めを優先するものとする。
+1.	所定外労働手当は、次のとおり算定し、支給する。但し、業務手当を支給される従業員については、第16条の定めを優先するものとする。
 	1.	時間単価
-		-	（基本給 ＋ 職能給 ＋ 役職手当）÷ 月平均所定労働時間
+		-	（基本給 ＋ 職能手当 ＋ 役職手当 + 技術手当 + 食事手当）÷ 月平均所定労働時間
 	1.	超過労働に係る手当額
 		1.	超過労働時間の算出
 			-	超過労働時間 = 所定労働時間を超える労働時間
@@ -177,7 +208,7 @@
 		-	手当額 = 2号から5号により算出した手当額の総計
 1.	管理職に対しては、超過労働、法定外労働及び休日労働に係る所定外労働手当は、支給しない。
 
-## 第２２条	賃金の日割り計算
+## 第２４条	賃金の日割り計算
 1.	賃金計算期間の途中で入退社し、その期間の所定労働日数が月平均所定労働日数を下回る場合は、賃金を日割りして支給する。
 1.	前項によらず、新卒者及び会社がそれに準ずると判断した者が月初に入社する場合、入社月の賃金を日割りせずに支給することがある。
 1.	日割り計算を行う場合の賃金算出方法は、次のとおりとする。
@@ -188,15 +219,16 @@
 |基本給|対象|
 |職能手当|対象|
 |役職手当|対象|
-|技術手当|対象外|
+|技術手当|対象|
 |業務手当|対象|
-|調整手当|対象外|
-|通勤手当|対象外（第15条の定めに従う）|
+|調整手当|対象|
+|食事手当|対象|
+|住宅手当|対象外|
 |家族手当|対象外|
-|資格手当|対象外|
+|通勤手当|対象外（第15条の定めに従う）|
 |所定外労働手当|対象外|
 
-## 第２３条	休職・休暇・欠勤等の賃金
+## 第２５条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したときに支払われる通常の賃金を支払う。
 1.	慶忌休暇期間は、第１項の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
@@ -211,27 +243,27 @@
 	1.	裁判員のための休暇期間・・・無給
 1.	就業規則第13条で定められた休職期間中は、賃金を支給しない。
 
-## 第２４条	休職・休暇・欠勤等による賃金減額
+## 第２６条	休職・休暇・欠勤等による賃金減額
 1.	就業規則で無給と定められた休職・休暇・欠勤・遅刻・早退等については、当該の不就労時間の賃金を減額して支給する。
 1.	賃金の減額計算は、所定外労働手当以外の賃金項目に対して行う。
 1.	減額支給を行う場合の賃金算出方法は、次のとおりとする。
 	-	賃金計算期間における不就労時間が月平均所定労働時間の50%未満の支給額
-		-	減額対象の賃金 × (1 - 不就労時間 ÷ 月平均所定労働時間)　+ 減額対象外の賃金
+		-	減額対象の賃金 × (1 - 不就労時間 ÷ 月平均所定労働時間) + 減額対象外の賃金
 	-	賃金計算期間における不就労時間が月平均所定労働時間の50%以上の支給額
-		-	減額対象の賃金 × (労働時間 ÷ 月平均所定労働時間)　+ 減額対象外の賃金
+		-	減額対象の賃金 × (労働時間 ÷ 月平均所定労働時間) + 減額対象外の賃金
 	-	減額対象となる賃金項目は、前条第3項の日割り計算対象の定めに従うものとする。
 
-## 第２５条	臨時休業の賃金
+## 第２７条	臨時休業の賃金
 1.	会社の都合により、所定労働日に従業員を休業させた場合、休業１日につき労働基準法第12条に規定する平均賃金の60％を支給する。ただし１日のうち一部休業させた場合は、労働基準法第26条に定めるところにより、平均賃金の6割に相当する賃金を保障する。
 
-## 第２６条	非常時払い
+## 第２８条	非常時払い
 1.	従業員又はその収入によって生計を維持する者が、次のいずれかに該当し、その費用に当てるため、従業員から請求があったときは、その都度、そのときまでの労働に対する賃金を支払う。
 	1.	出産、疾病または、災害の場合
 	1.	退職または、解雇により離職した場合
 	1.	結婚または、死亡の場合
 	1.	前項の定めによらず会社が特別に認めた場合
 
-## 第２７条	賞与
+## 第２９条	賞与
 1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
 1. 評価対象期間は次の通りとして、支給日当日に会社に在籍し、かつ評価対象期間に通常に勤務していた者について支払うこととする。
 	1. 賞与支給月 6月：評価対象期間 前年10月1日から当年3月31日
@@ -241,31 +273,31 @@
 
 # 第３章	嘱託社員の賃金
 
-## 第２８条	本章の適用範囲
+## 第３０条	本章の適用範囲
 1.	本章に定める賃金規定は、就業規則第2条に定める嘱託社員に対して適用する。
 
-## 第２９条	賃金の支払形態
+## 第３１条	賃金の支払形態
 1.	賃金の支払形態は、時給月給制によるものとする。
 
-## 第３０条	基本給
+## 第３２条	基本給
 1.	基本給は、本人の年齢、学歴、勤続年数、勤務態度等により決定する。
 
-## 第３１条	職能給
-1.	職能給は支給しない。
+## 第３３条	職能手当
+1.	職能手当は支給しない。
 
-## 第３２条	役職手当
+## 第３４条	役職手当
 1.	役職手当は支給しない。
 
-## 第３３条	業務手当
+## 第３５条	業務手当
 1.	業務手当は支給しない。
 
-## 第３４条	調整手当
+## 第３６条	調整手当
 1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
 
-## 第３５条	資格手当
+## 第３７条	資格手当
 1.	資格手当は、支給しない。
 
-## 第３６条	通勤手当
+## 第３８条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	公共交通機関を利用して通勤する場合、次の通り算定する。
 		-	会社が合理的であると認めた通勤経理・方法に限り、交通費を実費支給する。
@@ -281,7 +313,7 @@
 			-	減額を行わない
 	1.	上記以外の場合
 		-	休職・休暇・欠勤のあった日の交通費は一切支給しない
-1.	入退社・転勤・引っ越し等の事由により、賃金計算期間内の通勤手当算定が難しい場合、都度会社と本人が協議のうえ支給額を決定するものとする。但し、会社に対して経路変更等の申請・連絡が適切に行われていない場合は、協議を経ず会社の判断のみで当該期間の支給額を決定することがある。  
+1.	入退社・転勤・引っ越し等の事由により、賃金計算期間内の通勤手当算定が難しい場合、都度会社と本人が協議のうえ支給額を決定するものとする。但し、会社に対して経路変更等の申請・連絡が適切に行われていない場合は、協議を経ず会社の判断のみで当該期間の支給額を決定することがある。
 
 ※1項2号の算定表
 
@@ -292,16 +324,19 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第３７条	家族手当
+## 第３９条	家族手当
 1.	家族手当は、支給しない。
 
-## 第３８条	住宅手当
+## 第４０条	住宅手当
 1.	住宅手当は、支給しない。
 
-## 第３９条	所定外労働手当
+## 第４１条	食事手当
+1. 食事手当は、支給しない。
+
+## 第４２条	所定外労働手当
 1.	所定外労働手当は、第19条の定めに従う。但し、手当の算出における時間単価は、雇用契約による時給額とする。
 
-## 第４０条	休職・休暇・欠勤等の賃金
+## 第４３条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したあときに支払われる通常の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
 	1.	産前産後の休業期間・・・無給
@@ -315,13 +350,14 @@
 	1.	裁判員のための休暇期間・・・無給
 	1.	慶忌休暇・・・無給
 
-## 第４１条	賞与
+## 第４４条	賞与
 賞与は、支給しない。
 
 # 附則
 -	本規則は、平成27年 4月 1日から施行する。
 - 本規則は、平成29年 8月15日から改定施行する。
 - 本規則は、平成30年12月11日から改定施行する。
+- 本規則は、令和 1年5月31日から改定施行する。
 -	月平均所定労働日数は、次の通り算定する。
 	-	年間労働日数 = 年間暦日数（365日又は366日）— 年間休日合計数
 	-	年間所定労働時間 = 年間労働日数 × 7時間45分
