--- a/03_福利厚生.md
+++ b/03_福利厚生.md
@@ -29,7 +29,7 @@
 1.	社内懇親会補助は、従業員同士の親睦及び慰安を目的とした社内イベントを補助するものである。
 1.	社内懇親会補助を希望する場合、イベントの企画を会社に事前申請し、承認を得なければならない。
 1.	会社は、イベントの内容及び会社の業績等により、補助を認めないことがある。
-1.	補助額は、イベント1回につき1人あたり5,000円を上限とした実費とする。又、同一の従業員が受け取れる補助は、原則として1月につき1回までとする。
+1.	補助額は、イベント1回につき5,000円を上限とした実費とする。又、受け取れる補助は、原則として1月につき1回までとする。
 
 ## 第６条	書籍購入補助
 1.	書籍購入補助は、社員教育の一環として、従業員が自己学習のために購入する書籍の代金を補助するものである。
