テレワーク規定を追加。

--- a/01_就業規約.md
+++ b/01_就業規約.md
@@ -91,14 +91,18 @@
 	1.	賃金（退職手当及び臨時に支払われる賃金等を除く）の決定、計算及び支払の方法、賃金の締切り及び支払の時期並びに昇給・降給に関する事項
 	1.	退職に関する事項（解雇の事由を含む）
 
-## 第１１条	人事異動
+## 第１１条	テレワーク勤務
+1.	在宅勤務等テレワーク勤務を希望する従業員のうち、会社が認めたものについては、当該勤務を行なわせる。。
+1.	前項のテレワーク勤務に関しては、本規則に定めるもののほか、別に定めるテレワーク勤務規定による。
+
+## 第１２条	人事異動
 1.	会社は、業務上必要がある場合は、従業員の就業する場所又は従事する業務の変更を命ずることがある。
 1.	会社は、業務上必要がある場合は、従業員を在籍のまま他の会社又は関係団体に出向させることがある。
 1.	前2項の場合、従業員は正当な理由なくこれを拒むことはできない。
 1.	前1項、2項に定める命令に、正当な理由なく拒む従業員は、懲戒処分の対象となることがある。
 1.	前1項、2項により業務の変更が命じられた者は、迅速かつ確実に業務の引き継ぎを行い、関係する従業員と協力の上、業務が確実に遂行されるようにする。
 
-## 第１２条	正社員への転換
+## 第１３条	正社員への転換
 1.	勤続6ヶ月以上経過した契約社員の者で、本人が希望し会社が同意した場合、正社員に転換させる。
 1.	転換時期は、随時とする。
 1.	転換させる場合の要件及び基準は、次の通りとする。
@@ -106,11 +110,11 @@
 	1.	所属長の推薦があり、部門長の面接試験に合格した者
 	1.	その他、会社が指定する課題に合格した者（会社が提出を求めた場合に限る）
 
-## 第１３条	昇格・降格
+## 第１４条	昇格・降格
 1.	会社は、経営環境、従業員の勤務または健康状態等により、従業員に対して、職能資格等級上の昇格または降格を命じることがある。
 1.	会社は、経営環境、従業員の勤務または健康状態等により、従業員に対して、昇進または降職を命じることがある。
 
-## 第１４条	休職
+## 第１５条	休職
 1.	正社員が次の各号に該当するときには、休職を命じるものとする。
 	1.	業務外の傷病による欠勤が6ヶ月以内（起算日は会社の認定による）に通算15日間を超え、なお療養を継続する必要があるため勤務できないとき。但し状況によっては、欠勤が通算15日に至る前に休職を命ずることがある。
 	1.	業務外の傷病により、頻繁に欠勤するほどではないが、常に所定労働時間の勤務ができない、又は、職務遂行能力の低下等で完全な労務提供ができないとき
@@ -125,7 +129,7 @@
 	1.	前号の診断書の提出を拒否し、かつ、医療機関の受診も拒否する場合、会社は、休職を命ずることなく普通解雇することがある。
 	1.	当該傷病が休職期間中の療養によって治癒（従前の労務提供ができるまで回復）する蓋然性が低いと認められた場合及び従業員の自己保険義務に反する行為があった場合、会社は、休職を命ずることなく普通解雇することがある。
 
-## 第１５条	休職期間
+## 第１６条	休職期間
 1.	休職期間は、次のとおりとする。但し、相応の事由に基づき、その必要があると会社が認めた場合は、休職期間を延長することがある。
 	1.	前条1項第1号、2号、3号、5号により休職するとき
 		-	勤続1年未満・・・3ヶ月
@@ -141,7 +145,7 @@
 1.	休職期間中の社会保険料については、毎月の給与支払日から1週間以内に会社指定の口座に振り込まなければならない。
 1.	休職期間満了後においても休職事由が消滅しないときは、満了の日をもって自然退職とする。
 
-## 第１６条	復職
+## 第１７条	復職
 1.	休職の事由が消滅したときは、直ちに復職させる。
 1.	復職の際、原則として従前の職務に復職させるが、会社の状況もしくは従業員の職務提供状況に応じて異なる職務に配置することがある。この場合、労働条件の変更が伴うことがある。
 1.	休職事由が傷病による者が復職する場合は、医療機関が発行した治癒証明書（休職前と同様の労務提供ができる旨が記載されていること）を提出しなければならない。それにより、会社が、復職の是非を判断する。
@@ -153,11 +157,11 @@
 
 # 第３章	定年、退職及び解雇
 
-## 第１７条	定年
+## 第１８条	定年
 1.	従業員の定年は満60歳とし、定年に達した日の属する月の末日をもって退職とする。
 1.	前項の規程にかかわらず、定年後も引き続き雇用されることを希望し、解雇事由又は退職事由に該当しない従業員については、1年以内の有期契約の更新により、最大満70歳まで再雇用する。労働条件については、個別契約により明示する。
 
-## 第１８条	退職
+## 第１９条	退職
 1.	前条に定めるもののほか、従業員が次のいずれかに該当するときは、退職とする。
 	1.	前条の定年によるとき
 	1.	退職を願い出て会社が承認したとき、又は退職届を提出して1か月を経過したとき
@@ -178,21 +182,21 @@
 	1.	健康保険被保険者証
 	1.	その他会社から貸与されたもの
 
-## 第１９条	解雇
+## 第２０条	解雇
 1.	従業員が次のいずれかに該当し、改善の見込みもない場合は、解雇とする。
 	1.	勤務状況が不良で、従業員としての職責を果たし得ないとき
 	1.	勤務成績又は業務能率が不良であり、かつ、他の職務に転換させることができないとき
 	1.	特定の地位、職種又は一定の能力を条件として雇い入れられた者で、その能力又は適格性が欠けると認められるとき
 	1.	精神又は身体の障害により業務に耐えられないとき
 	1.	業務上の負傷又は疾病による療養の開始後3年を経過しても当該負傷又は疾病が治らない場合であって、従業員が傷病補償年金を受けているとき又は受けることとなったとき（会社が打ち切り補償を支払ったときを含む）
-	1.	第14条2項の3号又は4号に該当するとき
+	1.	第15条2項の3号又は4号に該当するとき
 	1.	誠実勤務義務又は完全な労務提供義務の不履行により、雇用契約を継続することが不適当と認められたとき
 	1.	企業秩序を乱す言動があり、会社の改善命令に従わないとき
 	1.	重大な懲戒事由に該当するとき
 	1.	事業の運営上又は天災事変その他これに準ずるやむを得ない事由により、事業の縮小又は部門の閉鎖等を行う必要が生じ、かつ他の職務への転換が困難なとき
 	1.	その他前各号に準ずるやむを得ない事由があったとき
 
-## 第２０条	解雇の予告
+## 第２１条	解雇の予告
 1.	前条により従業員を解雇する場合は、次の各号に掲げる者を除き、少なくとも30日前に本人に予告するか又は予告に代えて平均賃金の30日分以上の解雇予告手当を支払う。ただし、労働基準監督署長の認定を受けて本規定の第51条に定める懲戒解雇をする場合、及び次の各号のいずれかに該当する従業員を解雇する場合は、この限りでない。
 	1.	日々雇い入れられる者で、雇用期間が1か月を超えない者
 	1.	2か月以内の期間を定めて雇用した者
@@ -204,7 +208,7 @@
 
 # 第４章	服務
 
-## 第２１条	服務規律
+## 第２２条	服務規律
 1.	従業員は、職務上の責任を自覚し、誠実に職務を遂行するとともに、所属長の指示命令を誠実に守り、互いに協力して職責を遂行するとともに、職場の秩序の維持に努めなければならない。
 1.	所属長は部下の指示に努めるとともに、率先して職務の遂行にあたらなければならない。
 1.	従業員は、職場の秩序を維持し、業務の正常な運営を図るため、次の事項を守らなければならない。
@@ -227,7 +231,7 @@
 1.	前項に定める服務規律を違反していることが疑われる場合、会社は、プライバシーを侵害しない範囲で社内システム、電子メール、Webアクセス等のモニタリング及び内部監査を行うことがある。
 1.	服務規律に違反した場合、第9章に定める懲戒処分を行うことがある
 
-## 第２２条	セクシャル・ハラスメントの禁止
+## 第２３条	セクシャル・ハラスメントの禁止
 1.	従業員は次に掲げるセクシャル・ハラスメント行為をしてはならない。
 	1.	不必要な身体への接触
 	1.	性的冗談もしくは性的噂の流布
@@ -237,7 +241,7 @@
 	1.	執拗に食事に誘うこと
 	1.	その他、前各号に準ずる行為
 
-## 第２３条	パワー・ハラスメントの禁止
+## 第２４条	パワー・ハラスメントの禁止
 1.	職務上の地位や人間関係など職場内の優位性を背景に、他の関係者に対し次に掲げるパワー・ハラスメント行為をしてはならない。
 	1.	人格を傷つける発言を行うこと
 	1.	他の関係者の前で一方的に恫喝すること
@@ -248,7 +252,7 @@
 	1.	欠点を粗探しすること
 	1.	その他各号に準ずる行為
 
-## 第２４条	機密情報・個人情報の管理
+## 第２５条	機密情報・個人情報の管理
 1.	従業員は、当社および顧客等に関する情報の管理に十分注意を払うとともに、次の各号に挙げる情報を正当な理由もなく開示、利用目的を超えて取扱、漏えい、紛失、又は会社に許可のない持出（持ち出そうとしている段階での発覚も含む）をしてはならない。会社を退職した場合においても同様とする。
 	1.	会社の技術及び知的財産上の秘密に関する情報
 	1.	会社の営業、取引等の計画に関する情報
@@ -260,7 +264,7 @@
 1.	従業員は、職場異動、あるいは退職する際に、自らが管理していた当社および顧客等に関するデータ・情報書類等は速やかに返却しなければならない
 1.	営業秘密・個人情報の管理規則に違反する又は前項の改善命令に従わない場合、第9章に定める懲戒処分を行うことがある。
 
-## 第２５条	ソーシャルメディア等の利用
+## 第２６条	ソーシャルメディア等の利用
 1.	従業員は、TwitterやLINEなどのソーシャルメディア等の利用において、次の各号を遵守しなければならない。会社を退職した場合においても同様とする。
 	1.	会社及び取引先名や業態、ブランド名が識別できる書き込みをしない。但し事前に会社が認める場合はその限りではない。
 	1.	従業員個人や顧客個人が特定できる書き込みをしない。
@@ -272,7 +276,7 @@
 
 # 第５章	労働時間、休憩時間及び休日
 
-## 第２６条	所定労働時間
+## 第２７条	所定労働時間
 1.	所定労働時間（会社の基本労働時間）は、休憩時間を除き原則として、1日7時間45分、1週間あたり38時間45分とする。
 1.	前項によらず、個別の雇用契約書等により別段の定めがある場合は、これに従う。
 1.	客先に常駐して業務にあたる場合において、常駐先の所定労働時間が第1項による基本労働時間に満たない場合は、労働時間は次のとおりに扱う。
@@ -283,7 +287,7 @@
 	1.	労働時間が常駐先所定労働時間を超える場合
 		-	（基本労働時間 ＋ 常駐先所定労働時間を超過した時間）を労働したものとみなす
 
-## 第２７条	始業・終業の時刻及び休憩時間
+## 第２８条	始業・終業の時刻及び休憩時間
 1.	始業・終業の時刻及び休憩の時間は、次のとおりとする。
 	-	始業・・・9時00分（所定の労働場所にて業務を開始する時刻）
 	-	終業・・・17時45分（業務を終了する時刻）
@@ -293,15 +297,15 @@
 1.	客先常駐勤務の場合、始業・終業・休憩時間は客先に準ずる。
 1.	第1項の規定に関わらず、業務の都合その他やむを得ない事由により、始業および終業の時刻並びに休憩時間を繰り上げ、または繰り下げることがある。ただしこの場合においても1日の勤務時間は第１項の時間を超えないこととする。
 
-## 第２８条	専門業務型裁量労働制
-1.	第26条及び27条の規程によらず、会社は、正社員に対し、専門業務型裁量労働制を適用することがある。
+## 第２９条	専門業務型裁量労働制
+1.	第27条及び28条の規程によらず、会社は、正社員に対し、専門業務型裁量労働制を適用することがある。
 1.	専門業務型裁量労働制の適用に際し、労働基準法第38条の3に基づき、労使協定を締結し、労働基準監督署へ届け出なければならない。
 1.	前項により締結した労使協定を、就業規則に添付して就業規則の一部とし、本規則に定めのない場合は、当該協定の定める内容によるものとする。
 
-## 第２９条	出退勤
+## 第３０条	出退勤
 1.	従業員は、出退勤にあたって、出退勤時刻をタイムカードもしくは勤務表に自ら記録しなければならない。
 
-## 第３０条	欠勤・遅刻・早退・私用外出
+## 第３１条	欠勤・遅刻・早退・私用外出
 1.	従業員は、交通遅延、私傷病その他やむを得ない理由により、欠勤、遅刻、早退又は私用外出する場合には、あらかじめ届け出をし、承認を得なければならない。
 1.	遅刻ならびに欠勤で、事前に承認を得ることが難しい場合は、速やかに電話またはメール等で所属長に連絡しなければならない。
 1.	第1号、2号の連絡および届け出を怠った場合、あるいは会社が認めない場合は無断欠勤とみなし、懲戒の対象とする場合がある。
@@ -309,7 +313,7 @@
 1.	無断での欠勤に対する有給休暇の振替は認めない。
 1.	傷病のため欠勤が引き続き５日以上に及ぶときは、医師の診断書を提出しなければならない。
 
-## 第３１条	休日
+## 第３２条	休日
 1.	休日は、次の通りとする。
 	-	法定休日
 		-	日曜日
@@ -321,8 +325,8 @@
 		-	年末年始（12/30〜1/3）
 1.	業務の都合によりやむを得ない場合は、あらかじめ第１項の休日を他の日に振り替えることがある。この場合、原則として当該休日と同一週内の所定勤務日に振り替えるものとするが、やむを得ない場合は別途会社が指定する日に振り替えるものとする。なお振替により指定した休日に関しては無給とする。
 
-## 第３２条	時間外及び休日労働
-1.	業務の都合により、第26条の所定労働時間を超え、又は第31条の休日に労働させることがある。従業員は正当な理由なく、これを拒んではならない。
+## 第３３条	時間外及び休日労働
+1.	業務の都合により、第27条の所定労働時間を超え、又は第32条の休日に労働させることがある。従業員は正当な理由なく、これを拒んではならない。
 1.	前項の場合、法定労働時間を超える労働又は法定休日における労働については、あらかじめ会社は従業員の過半数代表者と書面による労使協定を締結するとともに、これを所轄の労働基準監督署長に届け出るものとする。
 1.	小学校就学前の子を養育又は家族の介護を行う男女の従業員（指揮命令者および専門事務従事者は除く）で時間外労働を短いものとすることを申し出た者の法定の労働時間を超える労働については、前項の協定において別に定めるものとする。
 1.	妊娠中の女性、産後1年を経過しない女性従業員（以下「妊産婦」という）であって請求した者及び18歳未満の者については、第2項による時間外労働又は休日若しくは深夜（22時から5時まで）に労働させることはない
@@ -330,19 +334,19 @@
 1.	前項の深夜業の制限の手続等必要な事項については、「育児・介護休業規程」で定める。
 1.	会社は、災害その他避けることのできない事由によって臨時の必要性がある場合には、労働基準法第33条の規定に基づき事前に所轄労働基準監督署長の許可を得ることにより、その必要の限度において法定労働時間を超えて、または法定休日および深夜に勤務を命じることができる。ただし、事態急迫のために所轄労働基準監督署長の許可を事前に受ける余裕のない場合においては、事後に遅滞なく届けるものとする。
 
-## 第３３条	代休
-1.	会社は、従業員を第31条の休日に労働させた場合、代休を与えることがある。
+## 第３４条	代休
+1.	会社は、従業員を第32条の休日に労働させた場合、代休を与えることがある。
 1.	賃金計算期間内の所定外労働時間が1日所定労働時間を超えている場合、会社は、所定外労働時間を代休に振り替えることがある。
 1.	急な傷病等のやむを得ない事由による欠勤は、本人が事後速やかに申し出たうえで会社が認めた場合に限り、代休に振り替えることができる。
 
-## 第３４条	適用除外
+## 第３５条	適用除外
 1.	前各条の規程にかかわらず、監督又は管理の地位にあるものについては、本章に定める労働時間、休憩、休日の適用を除外する。
 
 <div style="page-break-before:always"></div>
 
 # 第６章	休暇及び休業
 
-## 第３５条	年次有給休暇
+## 第３６条	年次有給休暇
 1.	年次毎に所定労働日の8割以上出勤した従業員に対しては、次のとおり勤続年数に応じた日数の年次有給休暇を与える。
 	1.	週所定労働日数が5日以上、又は週所定労働時間が30時間以上の従業員
 1.	従事する業務への実務経験が十分にあり、かつ業務遂行能力が高いと会社が評価した従業員には、年次有給休暇を前項の定めよりも多く与えることがある
@@ -350,14 +354,14 @@
 1.	急な傷病等のやむを得ない事由により欠勤は、本人が事後速やかに申し出たうえで会社が認めた場合に限り、年次有給休暇に振り替えることができる。
 1.	当該年度に行使しなかった年次有給休暇は、次年度に限り繰りこすことができる。
 1.	年次有給休暇の最大保有日数は、前項による繰越も含め、年間最大40日までとする。
-1.	年次有給休暇の算定年度は４月１日から翌年３月３１日までとし、付与日を４月１日とする。但し、入社後、最初の有給付与日は入社日から６カ月後とする。
-1.	年次有給休暇の最小取得単位は、半日（1日の所定労働時間の50%）とする。但し、1日の所定労働時間が6時間未満、又は、第28条の専門業務型裁量労働制が適用されている従業員は、最小取得単位を1日とする。
-1.	第28条の始業・終業・休憩の時刻に従う従業員が、半日単位で年次有給休暇を取得する場合の就業時間は、次のとおりとする。ただし取得可能限度を4月に始まる年度内で10日分を限度とする。
+1.	年次有給休暇の算定年度は４月１日から翌年３月３１日までとし、付与日を４月１日とする。但し、入社後、最初の有給付与日は入社日当日から３日、残り７日を６カ月後とする。
+1.	年次有給休暇の最小取得単位は、半日（1日の所定労働時間の50%）とする。但し、1日の所定労働時間が6時間未満、又は、第29条の専門業務型裁量労働制が適用されている従業員は、最小取得単位を1日とする。
+1.	第29条の始業・終業・休憩の時刻に従う従業員が、半日単位で年次有給休暇を取得する場合の就業時間は、次のとおりとする。ただし取得可能限度を4月に始まる年度内で10日分を限度とする。
 	1.	就業時間
 		-	午前休・・・１３時００分から１７時４５分を就業時間とする
 		-	午後休・・・９時００分から１２時００分を就業時間とする
 	1.	休憩時間
-		-	第27条に定める休憩時間帯を適用しない。ただし、半日単位の年次有給休を取得した日に時間外労働に従事する場合は、次のとおり実労働時間に応じた時間の休憩をしなければならない
+		-	第28条に定める休憩時間帯を適用しない。ただし、半日単位の年次有給休を取得した日に時間外労働に従事する場合は、次のとおり実労働時間に応じた時間の休憩をしなければならない
 			-	実労働時間が8時間以上の場合 ・・・ 休憩60分
 			-	実労働時間が6時間以上8時間未満の場合 ・・・ 休憩45分
 			-	実労働時間が6時間未満の場合 ・・・ 休憩なし
@@ -371,19 +375,7 @@
 |:--|:--|:--|:--|:--|:--|:--|
 |10日|11日|12日|14日|16日|18日|20日|
 
-## 第３６条	採用時特別休暇
-1.	採用時特別休暇とは、入社直後の年次有給休暇が与えられていない期間に、行政手続き等を円滑に行うため、又は、急な傷病等のやむを得ない事由がある場合に取得できる休暇である。
-1.	採用時特別休暇は、次のとおりの日数を、入社日の翌日に与える。
-	-	週所定労働日数が5日の正社員 ・・・ 3日
-	-	週所定労働日数が4日の正社員 ・・・ 2日
-	-	上記以外の従業員 ・・・ なし
-1.	採用時特別休暇の取得期限は、入社後最初の年次有給休暇が与えられる日の前日までとする。
-1.	採用時特別休暇は、取得希望日の前日までに届け出なければならない。但し、業務の都合によりやむを得ない場合には他の日に変更することがあり、届出事由によっては承認しないことがある。
-1.	急な傷病等のやむを得ない事由により欠勤は、本人が事後速やかに申し出たうえで会社が認めた場合に限り、採用時特別休暇に振り替えることができる。
-1.	採用時特別休暇の最小取得単位は、1日とする。
-1.	採用時特別休暇の取得期間は有給とし、出勤率算定の際は通常の勤務をしたものとみなす。
-
-## 第３８条	慶忌休暇
+## 第３７条	慶忌休暇
 1.	従業員が次のいずれかに該当する事由により休暇を申請した場合には、慶弔休暇を与える。
 	1.	本人が結婚するとき・・・最大5日
 	1.	子女が結婚するとき・・・最大2日
@@ -395,14 +387,14 @@
 1.	慶弔休暇の取得期間のうち、所定労働日に限っては、有給とし、出勤率算定の際は通常勤務したものとみなす。
 1.	本人が結婚する場合に対しての慶弔休暇は、1回の取得を上限とする。
 
-## 第３９条	産前産後の休業
+## 第３８条	産前産後の休業
 1.	６週間（多胎妊娠の場合は14週間）以内に出産する予定の女性従業員から請求があったときは、休業させる。
 1.	産後8週間を経過していない女性従業員は、就業させない。
 1.	前項の規程にかかわらず、産後6週間を経過した女性従業員から請求があった場合は、その者について医師が、支障がないと認めた業務に就かせることがある。
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
-## 第４０条	母性健康管理のための休暇等
+## 第３９条	母性健康管理のための休暇等
 1.	妊娠中又は出産後１年を経過しない女性従業員から、所定労働時間内に、母子保健法に基づく保健指導又は健康診査を受けるために申出があったときは、次の範囲で時間内通院を認める。
 	1.	産前の場合
 		-	妊娠２３週まで・・・4週に1回
@@ -418,7 +410,7 @@
 1.	本条による休暇期間及び休憩時間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務したものとみなす。
 
-## 第４１条	育児・介護休業、子の看護休業等
+## 第４０条	育児・介護休業、子の看護休業等
 1.	小学校就学前の子を養育する従業員は、4月に始まる年度内に子供1人については5日の範囲内で、2人以上の場合は10日の範囲内で子の看護又は子に予防接種・健康診断を受けさせるために休暇を取得することができる。
 1.	家族を介護する従業員は、介護する家族1人については5日の範囲内で、2人以上の場合は10日の範囲内で家族の介護のために休暇を取得することができる。
 1.	子の看護及び家族の介護休暇の取得を希望する者は、会社に請求をしなければならない。
@@ -426,27 +418,27 @@
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 1.	育児・介護休業については、法定どおりとする。
 
-## 第４２条	育児時間
+## 第４１条	育児時間
 1.	1歳に満たない子を養育する女性従業員から請求があったときは、休憩時間のほか1日について2回、1回について30分の育児時間を与える。
 1.	育児時間に対する賃金は無給とする。
 
-## 第４３条	生理休暇
+## 第４２条	生理休暇
 1.	生理日の就業が著しく困難な女性従業員から請求があったときは、必要な期間休暇を与える。
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす
 
-## 第４４条	公民権行使等休暇
+## 第４３条	公民権行使等休暇
 1.	従業員が裁判員もしくは補充裁判員となった場合または、裁判員候補者（以下「裁判員等」という）となった場合には、次の通り休暇を与える。ただし裁判員等になった旨を示す裁判所からの通知等を提出するものとする。ただし権利の行使または、公の職務の執行に妨げが無い限り、請求された時刻を変更することがある。
 	1.	裁判員または補充裁判員となった場合・・・必要な日数
 	1.	裁判員候補者となった場合・・・必要な時間
 1.	本条による休暇期間の賃金は無給とする。
 1.	出勤率算定の際、本条による休暇期間は通常の勤務をしたものとみなす。
 
-## 第４５条	教育訓練休暇
+## 第４４条	教育訓練休暇
 1.	会社は、従業員が自発的に自社の仕事に必要な職業能力の習得のため教育訓練を受講する場合に、教育訓練休暇を付与する。教育訓練休暇は有給とし、1年間につき5日間を付与する。
 
-## 第４６条	夏季特別休暇
-1.	会社は、心身の健康増進、家庭生活の充実のため、夏季特別休暇を付与するい。夏季特別休暇は有給とし、夏季（7月1日〜9月30日）の間、3日間を付与する。
+## 第４５条	夏季特別休暇
+1.	会社は、心身の健康増進、家庭生活の充実のため、夏季特別休暇を付与する。夏季特別休暇は有給とし、夏季（7月1日〜9月30日）の間、3日間を付与する。
 1.	業務の都合により、前項の夏季休暇の取得日を会社が変更することがある。
 1.	夏季特別休暇は翌年に持ち越すことはできない。
 
@@ -454,21 +446,21 @@
 
 # 第７章	賃金
 
-## 第４７条	賃金
+## 第４６条	賃金
 1.	賃金は、別に定める賃金規定により支給するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第８章	福利厚生
 
-## 第４８条	福利厚生
+## 第４７条	福利厚生
 1.	福利厚生は、別に定める福利厚生規定により提供するものとする。
 
 <div style="page-break-before:always"></div>
 
 # 第９章	表彰及び懲戒
 
-## 第４９条	表彰
+## 第４８条	表彰
 1.	会社は、従業員が次のいずれかに該当する場合、次の通り表彰する。
 	1.	業務上有益な創意工夫、改善を行い、会社の運営に貢献したとき
 	1.	永年にわたって誠実に勤務し、その成績が優秀で他の模範となるとき
@@ -477,7 +469,7 @@
 	1.	前各号に準ずる前項または功労のあったとき
 1.	表彰は、原則として会社の創立記念日に行う。
 
-## 第５０条	懲戒の種類
+## 第４９条	懲戒の種類
 1.	懲戒の種類及び程度は、次の通りとする。
 	-	けん責・・・始末書を提出させて将来を戒める
 	-	減給・・・始末書を提出させて減給する。ただし減給は1回の額が、平均賃金の1日分の5割を超えることなく、また総額が1賃金支払い期間における賃金の1割を超えることはない
@@ -486,16 +478,16 @@
 	-	論旨退職・・・退職届を提出するように勧告する。なお勧告した日から7日以内に退職届の提出がない場合は懲戒解雇とする
 	-	懲戒解雇・・・即時解雇する
 
-## 第５１条	けん責・減給・出勤停止又は降格
+## 第５０条	けん責・減給・出勤停止又は降格
 1.	従業員が次の各号のいずれかに該当するときは、けん責・減給・出勤停止・降格とする。
 	1.	正当な理由なく、当該無断欠勤をした日以前6ヶ月間の間にも連絡・断続を問わず無断欠勤が3日以上に及ぶ時
 	1.	正当な理由なく、しばしば欠勤・遅刻・早退など勤務を怠ったとき
 	1.	過失により会社に損害を与えたとき
 	1.	素行不良で会社内の秩序又は風紀を乱したとき
-	1.	本規定及び第21条の服務規律に違反し、その事案が軽微なとき
+	1.	本規定及び第22条の服務規律に違反し、その事案が軽微なとき
 	1.	無届の方法により通勤していることが判明したとき
 
-## 第５２条	論旨解雇又は懲戒解雇
+## 第５１条	論旨解雇又は懲戒解雇
 1.	従業員が次の各号の一に応答した場合は、諭旨解雇又は懲戒解雇とする。懲戒解雇の場合において、労働基準監督署長の認定を受けた時は、労働基準法第20条に規程する予告手当は支給しない。但し、平素の勤務態度その他の情状によっては、普通解雇又は前条の処分とすることがある。
 	1.	重要な経歴を偽り、採用されたとき
 	1.	正当な理由なく、無断欠勤が以前6ヶ月間に連続・断続を問わず7日以上あり、出勤の督促に応じなかったとき
@@ -523,7 +515,7 @@
 	1.	この他本規則に違反し、又は前各号に準ずる不都合な行為があったとき
 1.	前項の規程による従業員の懲戒解雇に際し、従業員から請求があった場合は、懲戒解雇の理由を記載した文書を交付する。
 
-## 第５３条	損害賠償
+## 第５２条	損害賠償
 1.	従業員が故意または重大な過失により会社に損害を与えた場合、損害の一部または、全部を本人に賠償させることがある。ただしこれにより懲戒処分を免れるものではない。
 1.	当該損害賠償の責任は、退職後も免れることはできない。
 
@@ -531,15 +523,15 @@
 
 # 第１０章	教育
 
-## 第５４条	教育訓練
+## 第５３条	教育訓練
 1.	会社は、従業員に対し、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
-1.	教育訓練休暇の取得日数については、第45条の定めに従う。
+1.	教育訓練休暇の取得日数については、第44条の定めに従う。
 
 <div style="page-break-before:always"></div>
 
 # 第１１章	安全衛生及び労災補償
 
-## 第５５条	遵守事項
+## 第５４条	遵守事項
 1.	会社は、従業員の安全衛生の確保及び改善を図り、快適な職場環境の形成のため必要な措置を講ずる。
 1.	従業員は、安全衛生に関する法令及び会社の指示を守り、会社と協力して労働災害の防止に努めなければならない。
 	1.	自衛消防隊を会社が組織する場合は必ず加入すること
@@ -548,14 +540,14 @@
 	1.	通路、階段、非常口及び消火設備のある場所に物品等を置かないこと
 	1.	前各号のほか、安全、防災に関する管理者の指示に従うこと
 
-## 第５６条	非常災害時の措置
+## 第５５条	非常災害時の措置
 1.	従業員は、災害その他非常災害の発生する危険を予知し、又は異常を発見したとき、直ちに所属長に通報し、臨機の措置をとらなければならない。
 1.	従業員は、火災その他非常災害が発生した場合は、互いに協力してその被害を最小限に留めるように努力して、顧客等の避難誘導等適切な措置を講じなければならない。
 
-## 第５７条	衛生に関する心得
+## 第５６条	衛生に関する心得
 1.	従業員は、健康の保持向上に努め、衛生管理者その他の関係者の指示に従い、会社の行う健康に関する施策の推進に協力し、かつ指示を励行しなければならない。
 
-## 第５８条	健康診断
+## 第５７条	健康診断
 1.	会社は、正社員に対して、採用の際及び毎年1回（深夜労働に従事する者は6か月ごとに1回）、定期に健康診断を行う。但し契約社員であっても、週所定労働時間が通常労働者の4分の3以上である者については同様に健康診断を行う。
 1.	前項によらず、従業員が採用前3か月以内に健康診断を実施し、その結果を証明する書類を提出した場合には、受診した項目について、採用時の健康診断を省略することができる。
 1.	従業員は、健康診断の結果に異常の所見がある場合には、再検査を受診しなければならない。
@@ -564,17 +556,17 @@
 	1.	会社の労務管理、賃金管理
 	1.	出向、転籍等のための人事管理
 
-## 第５９条	長時間従業員の面接指導
+## 第５８条	長時間従業員の面接指導
 1.	1月あたりの時間外労働が80時間を超え、疲労の蓄積が認められ又は健康上の不安を有している従業員から申出があった場合には、医師による面接指導を行う。
 
-## 第６０条	安全衛生教育
+## 第５９条	安全衛生教育
 1.	従業員に対し、採用の際及び配置換え等により作業内容を変更した際に、その従事する業務に必要な安全衛生教育を行う。
 
-## 第６１条	就業禁止等
+## 第６０条	就業禁止等
 1.	他人に伝染するおそれのある疾病にかかっている者または、疾病のため他人に害を及ぼすおそれのある者、その他医師が就業不適当と認めた者は就業させない。
 1.	従業員は、同居の家族または同居人が、他人に伝染するおそれのある疾病に罹り、またはその疑いのある場合、直ちに所属長に届け出て、必要な指示を受けなければならない。
 
-## 第６２条	災害補償
+## 第６１条	災害補償
 1.	従業員が業務上の事由又は通勤により負傷し、疾病にかかりまたは死亡した場合、労働基準法及び労働者災害補償保険法に定めるところにより災害補償を行う。
 
 # 附則
@@ -584,5 +576,6 @@
 -	本規則は、平成30年 7月 31日から改定施行する。
 -	本規則は、平成30年12月 11日から改定施行する。
 -	本規則は、令和 1年 5月  1日から改定施行する。
+-	本規則は、令和 2年 7月  1日から改定施行する。
 -	本規則の平均賃金とは、労働基準法第12条の平均賃金をいう。
 -	本規則に関する事項で、法令の改廃がなされた場合は、その定めによる。
