--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -265,9 +265,10 @@
 
 ## 第２９条	賞与
 1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
-1. 評価対象期間は次の通りとして、支給日当日に会社に在籍し、かつ評価対象期間に通常に勤務していた者について支払うこととする。
+1. 評価対象期間は次の通りとして、評価対象期間に通常に勤務し、支給日当日に会社に在籍し、引き続き６ヶ月の就業が見込まれる従業員に対し、支払うこととする。
 	1. 賞与支給月 6月：評価対象期間 前年10月1日から当年3月31日
 	1. 賞与支給月 12月：評価対象期間 当年4月1日から当年9月30日
+1. 前項の賞与に加え、従業員の貢献度に応じて特別賞与を支払うことがある。
 
 <div style="page-break-before:always"></div>
 
@@ -358,6 +359,7 @@
 - 本規則は、平成29年 8月15日から改定施行する。
 - 本規則は、平成30年12月11日から改定施行する。
 - 本規則は、令和 1年5月31日から改定施行する。
+- 本規則は、令和 2年7月 1日から改定施行する。
 -	月平均所定労働日数は、次の通り算定する。
 	-	年間労働日数 = 年間暦日数（365日又は366日）— 年間休日合計数
 	-	年間所定労働時間 = 年間労働日数 × 7時間45分
