テレワーク手当の追記。

--- a/04_テレワーク勤務規定.md
+++ b/04_テレワーク勤務規定.md
@@ -29,6 +29,9 @@
 	1.	在宅勤務中は自宅以外の場所で業務を行ってはならない。
 	1.	在宅勤務の実施に当たっては、会社の情報の取扱いに関し、セキュリティガイドライン及び関連規定類を遵守すること
 
+## 第５条	在宅勤務時の光熱費・通信費
+1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき１００円を支給する。
+
 # 第３章		在宅勤務時の労働時間等
 
 ## 第５条	在宅勤務時の労働時間
