--- a/04_テレワーク勤務規定.md
+++ b/04_テレワーク勤務規定.md
@@ -30,7 +30,7 @@
 	1.	在宅勤務の実施に当たっては、会社の情報の取扱いに関し、セキュリティガイドライン及び関連規定類を遵守すること
 
 ## 第５条	在宅勤務時の光熱費・通信費
-1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき１００円を支給する。
+1.	賃金規定の「テレワーク手当」の取り扱いに準じる。
 
 # 第３章		在宅勤務時の労働時間等
 
