--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -16,17 +16,16 @@
 	-	基本給
 	-	職能手当
 	-	役職手当
-	- 技術手当
+	-	技術手当
 	-	業務手当
-	- 調整手当
-	- 食事手当
-	- 住宅手当
-	- 家族手当
+	-	調整手当
+	-	食事手当
+	-	テレワーク手当
+	-	資格手当
 	-	通勤手当
-	- 資格手当
 	-	家族手当
+	-	住宅手当
 	-	所定外労働手当
-
 
 ## 第４条	賃金の支払と控除
 1.	賃金は、本人に直接、通貨で支払う。但し、本人の同意がある場合は本人名義の銀行預金口座に振込み支払うものとする。
@@ -83,17 +82,17 @@
 1.	技術手当は、社会環境、技術環境、会社の営業環境等の変遷により保有技能が会社の求めるところと適合しなくなった場合、降給となることがある。
 
 ## 第１６条	業務手当
-1.	業務手当は、第23条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
+1.	業務手当は、第24条の所定外労働手当をみなし支給するものであり、所定外賃金に関する計算事務の煩雑化を防ぐことを目的として支給するものである固定時間外労働手当を含むものとする。
 1.	会社は、業務手当の支給額が何時間分の所定外賃金に相当するかを雇用契約書等により、あらかじめ明示しておかなければならない。
 1.	所定外労働手当の算出額が、業務手当の金額を超過する場合は、その超過額を所定外労働手当として、業務手当とは別に支給する。
 1.	前項に該当しない場合、所定外労働手当は支給しない。
 
 ## 第１７条	調整手当
-1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。
+1.	調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。
 
 ## 第１８条	食事手当
-1. 食事手当は、月額3,500円を支給する。
-1. 出勤日数が、所定就業日数の８割未満である場合は、食事手当に次の率を乗じた金額を支給する。
+1.	食事手当は、月額3,500円を支給する。
+1.	出勤日数が、所定就業日数の８割未満である場合は、食事手当に次の率を乗じた金額を支給する。
 
 |出勤日数|掛率|
 |:---|---:|
@@ -103,12 +102,16 @@
 |出勤日数が所定就業日数の3割未満|20％|
 |出勤日数がない場合|0％|
 
-## 第１９条	資格手当
+## 第１９条	テレワーク手当
+1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
+1.	在宅勤務対象者や規則については「テレワーク勤務規定」に準ずる。
+
+## 第２０条	資格手当
 1.	資格手当は、会社が認めた資格を取得したことに対し支給額、支給期間を会社が定めて支給することがある。
 1.	資格手当は、入社後に取得した資格を対象とする。
 1.	資格手当の対象となる資格を新たに取得した場合は、資格を証する書類の原本を提示し、写しを会社に提出し届出ることとする。
 
-## 第２０条	通勤手当
+## 第２１条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	通勤手当は、次の上限額を超えないように支給する。
 		-	常勤正社員・契約社員の場合・・・30,000円
@@ -139,7 +142,7 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第２１条	家族手当
+## 第２２条	家族手当
 1.	家族手当は、賃金締切日の前月の末日において健康保険の被扶養者かつ従業員本人及び本人と同居する配偶者又は子（養子・実子を問わず）を有する従業員に対し、区分に従い次のとおり支給する。
 
 |健康保険の被扶養者|月額|
@@ -153,7 +156,7 @@
 3.	会社に対して家族構成の変更等の申請・連絡を行う。適切に行われていない場合は、協議を経ず会社の判断のみで支給を打ち切ることがある。
 4.	第３号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
 
-## 第２２条	住宅手当
+## 第２３条	住宅手当
 1.	住宅手当は、自ら居住する住宅を要するために家賃または住宅ローンを負担している従業員に対し、次に定める額を支給する。
 
 |住宅区分|住宅手当額|
@@ -171,7 +174,7 @@
 3.	引っ越し、その他の事由により、前項により提出した書類に変更があった場合は、事由の生じた日の属する賃金計算期間の末日までに変更後の証明書類を添付して会社に届けでること。会社はそれに基づき、翌月支払い分から新たに算定した住宅手当を支給する。
 4.	前各号の連絡に虚偽等が発覚した場合、懲戒の対象とする場合がある。
 
-## 第２３条	所定外労働手当
+## 第２４条	所定外労働手当
 1.	所定外労働手当は、次の労働時間の対価として支給する。
 	-	超過労働 ・・・ 雇用契約で定められた所定労働時間を超えた労働時間
 	-	法定外労働 ・・・ 労働基準法で定められた法定労働時間を超えて労働した時間
@@ -208,7 +211,7 @@
 		-	手当額 = 2号から5号により算出した手当額の総計
 1.	管理職に対しては、超過労働、法定外労働及び休日労働に係る所定外労働手当は、支給しない。
 
-## 第２４条	賃金の日割り計算
+## 第２５条	賃金の日割り計算
 1.	賃金計算期間の途中で入退社し、その期間の所定労働日数が月平均所定労働日数を下回る場合は、賃金を日割りして支給する。
 1.	前項によらず、新卒者及び会社がそれに準ずると判断した者が月初に入社する場合、入社月の賃金を日割りせずに支給することがある。
 1.	日割り計算を行う場合の賃金算出方法は、次のとおりとする。
@@ -223,12 +226,14 @@
 |業務手当|対象|
 |調整手当|対象|
 |食事手当|対象|
-|住宅手当|対象外|
-|家族手当|対象外|
+|テレワーク手当|対象外|
+|資格手当|対象外|
 |通勤手当|対象外（第15条の定めに従う）|
+|家族手当|対象外|
+|住宅手当|対象外|
 |所定外労働手当|対象外|
 
-## 第２５条	休職・休暇・欠勤等の賃金
+## 第２６条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したときに支払われる通常の賃金を支払う。
 1.	慶忌休暇期間は、第１項の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
@@ -243,7 +248,7 @@
 	1.	裁判員のための休暇期間・・・無給
 1.	就業規則第13条で定められた休職期間中は、賃金を支給しない。
 
-## 第２６条	休職・休暇・欠勤等による賃金減額
+## 第２７条	休職・休暇・欠勤等による賃金減額
 1.	就業規則で無給と定められた休職・休暇・欠勤・遅刻・早退等については、当該の不就労時間の賃金を減額して支給する。
 1.	賃金の減額計算は、所定外労働手当以外の賃金項目に対して行う。
 1.	減額支給を行う場合の賃金算出方法は、次のとおりとする。
@@ -253,17 +258,17 @@
 		-	減額対象の賃金 × (労働時間 ÷ 月平均所定労働時間) + 減額対象外の賃金
 	-	減額対象となる賃金項目は、前条第3項の日割り計算対象の定めに従うものとする。
 
-## 第２７条	臨時休業の賃金
+## 第２８条	臨時休業の賃金
 1.	会社の都合により、所定労働日に従業員を休業させた場合、休業１日につき労働基準法第12条に規定する平均賃金の60％を支給する。ただし１日のうち一部休業させた場合は、労働基準法第26条に定めるところにより、平均賃金の6割に相当する賃金を保障する。
 
-## 第２８条	非常時払い
+## 第２９条	非常時払い
 1.	従業員又はその収入によって生計を維持する者が、次のいずれかに該当し、その費用に当てるため、従業員から請求があったときは、その都度、そのときまでの労働に対する賃金を支払う。
 	1.	出産、疾病または、災害の場合
 	1.	退職または、解雇により離職した場合
 	1.	結婚または、死亡の場合
 	1.	前項の定めによらず会社が特別に認めた場合
 
-## 第２９条	賞与
+## 第３０条	賞与
 1. 賞与は、賞与の支給日に在籍しかつ６ヵ月以上継続勤務する従業員（試用期間中の者又は休職中の者、支給日前６ヵ月間で懲戒処分を受けたものを除く）に対し、本人の実績及び勤務成績等、会社の業績等を勘案して支給する。ただし、会社の業績の著しい低下その他やむを得ない事由等がある場合又は本人の勤務成績が悪い場合は支給しないことがある。契約社員、嘱託社員には原則として賞与は支給しない。
 1. 評価対象期間は次の通りとして、評価対象期間に通常に勤務し、支給日当日に会社に在籍し、引き続き６ヶ月の就業が見込まれる従業員に対し、支払うこととする。
 	1. 賞与支給月 6月：評価対象期間 前年10月1日から当年3月31日
@@ -274,31 +279,31 @@
 
 # 第３章	嘱託社員の賃金
 
-## 第３０条	本章の適用範囲
+## 第３１条	本章の適用範囲
 1.	本章に定める賃金規定は、就業規則第2条に定める嘱託社員に対して適用する。
 
-## 第３１条	賃金の支払形態
+## 第３２条	賃金の支払形態
 1.	賃金の支払形態は、時給月給制によるものとする。
 
-## 第３２条	基本給
+## 第３３条	基本給
 1.	基本給は、本人の年齢、学歴、勤続年数、勤務態度等により決定する。
 
-## 第３３条	職能手当
+## 第３４条	職能手当
 1.	職能手当は支給しない。
 
-## 第３４条	役職手当
+## 第３５条	役職手当
 1.	役職手当は支給しない。
 
-## 第３５条	業務手当
+## 第３６条	業務手当
 1.	業務手当は支給しない。
 
-## 第３６条	調整手当
+## 第３７条	調整手当
 1. 調整手当は、会社が業務上必要と認められる従業員に対し、その名称、目的、支給額、支給期間を会社が定めて支給することがある。 
 
-## 第３７条	資格手当
+## 第３８条	資格手当
 1.	資格手当は、支給しない。
 
-## 第３８条	通勤手当
+## 第３９条	通勤手当
 1.	通勤手当は、次のとおり算定し、支給する。
 	1.	公共交通機関を利用して通勤する場合、次の通り算定する。
 		-	会社が合理的であると認めた通勤経理・方法に限り、交通費を実費支給する。
@@ -325,19 +330,23 @@
 |8km以上12km未満|1日あたり200円|
 |12km以上|1日あたり250円|
 
-## 第３９条	家族手当
+## 第４０条	家族手当
 1.	家族手当は、支給しない。
 
-## 第４０条	住宅手当
+## 第４１条	住宅手当
 1.	住宅手当は、支給しない。
 
-## 第４１条	食事手当
-1. 食事手当は、支給しない。
+## 第４２条	食事手当
+1.	食事手当は、支給しない。
 
-## 第４２条	所定外労働手当
-1.	所定外労働手当は、第19条の定めに従う。但し、手当の算出における時間単価は、雇用契約による時給額とする。
+## 第４３条	テレワーク手当
+1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
+1.	在宅勤務対象者や規則については「テレワーク勤務規定」に準ずる。
 
-## 第４３条	休職・休暇・欠勤等の賃金
+## 第４４条	所定外労働手当
+1.	所定外労働手当は、第23条の定めに従う。但し、手当の算出における時間単価は、雇用契約による時給額とする。
+
+## 第４５条	休職・休暇・欠勤等の賃金
 1.	年次有給休暇期間は、月所定労働時間を労働したあときに支払われる通常の賃金を支払う。
 1.	その他休業期間等については、次のとおりとする。
 	1.	産前産後の休業期間・・・無給
@@ -351,7 +360,7 @@
 	1.	裁判員のための休暇期間・・・無給
 	1.	慶忌休暇・・・無給
 
-## 第４４条	賞与
+## 第４６条	賞与
 賞与は、支給しない。
 
 # 附則
@@ -360,6 +369,7 @@
 - 本規則は、平成30年12月11日から改定施行する。
 - 本規則は、令和 1年5月31日から改定施行する。
 - 本規則は、令和 2年7月 1日から改定施行する。
+- 本規則は、令和 2年8月 1日から改定施行する。
 -	月平均所定労働日数は、次の通り算定する。
 	-	年間労働日数 = 年間暦日数（365日又は366日）— 年間休日合計数
 	-	年間所定労働時間 = 年間労働日数 × 7時間45分
