テレワーク関連のテキスト修正。

--- a/02_賃金規定.md
+++ b/02_賃金規定.md
@@ -103,7 +103,7 @@
 |出勤日数がない場合|0％|
 
 ## 第１９条	テレワーク手当
-1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
+1.	在宅勤務者が勤務を行うための水道光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
 1.	在宅勤務対象者や規則については「テレワーク勤務規定」に準ずる。
 
 ## 第２０条	資格手当
@@ -340,7 +340,7 @@
 1.	食事手当は、支給しない。
 
 ## 第４３条	テレワーク手当
-1.	在宅勤務者が勤務を行うための光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
+1.	在宅勤務者が勤務を行うための水道光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。
 1.	在宅勤務対象者や規則については「テレワーク勤務規定」に準ずる。
 
 ## 第４４条	所定外労働手当
