--- a/04_テレワーク勤務規定.md
+++ b/04_テレワーク勤務規定.md
@@ -29,30 +29,71 @@
 	1.	在宅勤務中は自宅以外の場所で業務を行ってはならない。
 	1.	在宅勤務の実施に当たっては、会社の情報の取扱いに関し、セキュリティガイドライン及び関連規定類を遵守すること
 
-## 第５条	在宅勤務時の光熱費・通信費
-1.	賃金規定の「テレワーク手当」の取り扱いに準じる。
-
 # 第３章		在宅勤務時の労働時間等
 
-## 第６条	在宅勤務時の労働時間
+## 第５条	在宅勤務時の労働時間
 1.	在宅勤務時の労働時間については、就業規則の「第５章	労働時間、休憩時間及び休日」の定めるところによる。
 1.	前項にかかわらず、会社の承認を受けて始業時刻、終業時刻及び休憩時間の変更をすることができる。
 1.	前項の規定により所定労働時間が短くなる者の給与については、賃金規定の「休職・休暇・欠勤等の賃金」および「休職・休暇・欠勤等による賃金減額」に規定する勤務短縮措置時の給与の取扱いに準じる。
 
-## 第７条	休憩時間
+## 第６条	休憩時間
 1.	在宅勤務者の休憩時間については、就業規則の「始業・終業の時刻及び休憩時間」の定めるところによる。
 
-## 第８条	所定休日
+## 第７条	所定休日
 1.	在宅勤務者の休日については、就業規則の「休日」の定めるところによる。
 
-## 第９条	時間外及び休日労働等
+## 第８条	時間外及び休日労働等
 1.	在宅勤務者が時間外労働、休日労働及び深夜労働する場合は所定の手続を経て所属長の許可を受けなければならない。
 1.	時間外及び休日労働について必要な事項は就業規則の「時間外及び休日労働」の定めるところによる。
 1.	時間外、休日及び深夜の労働については、賃金規定に基づき、時間外勤務手当、休日勤務手当及び深夜勤務手当を支給する。
 
-## 第１０条	欠勤等
+## 第９条	欠勤等
 1.	在宅勤務者が、欠勤をし、又は勤務時間中に私用のために勤務を一部中断する場合は、事前に申し出て許可を得なくてはならない。ただし、やむを得ない事情で事前に申し出ることができなかった場合は、事後速やかに届け出なければならない。
 1.	前項の欠勤、私用外出の賃金については就業規則の「欠勤・遅刻・早退・私用外出」の定めるところによる
+
+# 第４章		在宅勤務時の勤務等
+## 第１０条　在宅勤務者は勤務の開始及び終了について
+1. 次のいずれかの方法により報告しなければならない。
+	1. 電話
+	1. 電子メール
+	1. 勤怠管理ツール
+
+## 第１１条　在宅勤務時の業務報告
+11. 在宅勤務者は、定期的又は必要に応じて、電話又は電子メール等で所属長に対し、所要の業務報告をしなければならない。
+
+## 第１２条　在宅勤務時における連絡体制
+1. 在宅勤務時における連絡体制は次のとおりとする。
+	1. 事故・トラブル発生時には所属長に連絡すること。
+	1. 社内における従業員への緊急連絡事項が発生した場合は、在宅勤務者へは緊急連絡網のスキームに従い連絡すること。
+	1. 情報通信機器に不具合が生じ、緊急を要する場合は総務課に連絡をとり指示を受けること。
+
+# 第５章		在宅勤務時の給与等
+## 第１３条　在宅勤務者の給与
+1. 在宅勤務者の給与については、賃金規定に定めるところによる。
+1. 在宅勤務期間は、毎月定額の通勤手当は支給せず実際に通勤に要する往復運賃の実費を給与支給日に支給するものとする。
+
+## 第１４条　在宅勤務時の水道光熱費・通信費
+1. 在宅勤務者が勤務を行うための水道光熱費・通信費はプライベート使用分と業務使用分との切り分けが困難なため、１日につき100円を支給する。賃金規定の「テレワーク手当」の取り扱いに準じる。
+1. 業務に必要な郵送費、事務用品費、消耗品費その他会社が認めた費用は会社負担とする。
+1. その他の費用については在宅勤務者の負担とする。
+
+## 第１５条 情報通信機器・ソフトウェアの貸与等
+1. 会社は、在宅勤務者が必要とするパソコン、周辺機器などの情報通信機器・ソフトウェア及びこれらに類する物を無償にて貸与する。なお、当該パソコンに会社の許可を受けずにソフトウェアをインストールしてはならない。
+1. 会社は、在宅勤務者が所有する機器を利用させることができる。この場合は、セキュリティガイドラインを満たした場合に限るものとし、費用については話し合いの上決定するものとする。
+1. 私有機器を業務に使用する場合は次の事項を所定の申請書に記入してあらかじめ許可を受けなければならない。
+	1. パソコン
+		1. 使用する機器のメーカー・名称
+		1. 使用するOS
+		1. セキュリティソフト名
+
+## 第１６条 教育訓練
+1. 会社は、在宅勤務者に対して、業務に必要な知識、技能を高め、資質の向上を図るため、必要な教育訓練を行う。
+
+## 第１７条　災害補償
+1. 在宅勤務者が自宅での業務中に災害に遭ったときは、就業規則第11章安全衛生及び労災補償の定めるところによる。
+
+## 第１８条　安全衛生
+1. 会社は、在宅勤務者の安全衛生の確保及び改善を図るため必要な措置を講ずる。在宅勤務者は、安全衛生に関する法令等を守り、会社と協力して労働災害の防止に努めなければならない。
 
 # 附則
 -	本規則は、令和 2年 8月  1日から改定施行する。
